--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
@@ -1,26 +1,63 @@
 
 当"`virtualize APIC accesses`" 为 1 时，guest 尝试进行下面的访问将产生 VM-exit, 这个 VM-exit 可称为 "APIC- access Vm-exit"。
 
-(1) 尝试**线性访问**(包括读和写) `APIC-access page` 页面内不支持的 offset 位置将产生 `APIC-access VM-exit`.
+(1) 尝试**线性访问**(GVA, 包括读和写) `APIC-access page` 页面内**不支持的 offset 位置**将产生 `APIC-access VM-exit`.
 
 * 当“use TPR shadow”为 0 时，所有的 offset 位置都不支持。
 
-* 当“use TPR shadow“为 1, 且“APIC- register virtualization“与“virtual- -Interrupt  delivery 都为 0 时，仅有 offset 为 80H 位置（TPR）被支持
+* 当“use TPR shadow“为 1 时, 且“`APIC-register virtualization`“ 与 "`virtual- -Interrupt delivery`" 都为 **0** 时，仅有 offset 为 **80H** 位置(**TPR**)被支持
 
-当“use TPR shadow 为 1, 且“APIC- -register virtualization”为 0, " virtual-  interrupt delivery”为 1 时，支持下面的访问： offset 为 80H 位置（TPR）支持读写
+* 当“use TPR shadow 为 1, 且 “`APIC-register virtualization`”为 **0**, "`virtual-interrupt delivery`”为 **1** 时，支持下面的访问： 
 
- offset 为 B 位置（EOI）与 300H 位置（ICR 低 32 位）支持写访问。
+    * offset 为 80H 位置（TPR）支持读写
+    * offset 为 B 位置（EOI）与 300H 位置（ICR 低 32 位）支持写访问。
 
-当“use TPR shadow 为 1, 且“APIC- register virtualization 为 1 时，表 7-2 中所列的所有 offset。位置可访问。
+* 当“use TPR shadow 为 1, 且“APIC- register virtualization 为 1 时，表 7-2 中所列的所有 offset。位置可访问。
 
- (2) 尝试 guest-physical i 访问（包括读和写）APIC- access page 页面内任何的 offset 位置将产生 APC- access Vm-exit
+ (2) 尝试 **guest-physical** 访问(GPA, 包括读和写)`APIC-access page` 页面内**任何的 offset 位置**将产生 `APIC-access Vm-exit`.
 
-《Intel 手册》明确表明：guest 尝试 physical access（物理访问）APC- access page 页面可能会也可能不会产生 Vm-exit。当不产生 APIC- access Vm-exit 时，可能会访问到  virtual- APIC page 页面内的数据。
+《Intel 手册》明确表明：guest 尝试 physical access（物理访问）APC-access page 页面**可能会**也**可能不会**产生 Vm-exit。当不产生 APIC-access Vm-exit 时，可能会访问到  virtual-APIC page 页面内的数据。
 
-7.2.6.1APIC- access Vm-exit 优先级别
+# APIC- access Vm-exit 优先级别
 
-当 guest 尝试访问 APIC- access page 页面时，可能会存在多个引发 Vm-exit 或其他事件的条件。例如下面的代码。
+当 guest 尝试访问 `APIC-access page` 页面时，可能会存在多个引发 Vm-exit 或其他事件的条件。例如下面的代码。
 
- mov eax,  [ebx+ LAPIC_ID 读取 APICID 值
+```
+mov eax,  [ebx + LAPIC_ID]  ;读取 APICID 值
+```
 
-在上面的代码里，guest 尝试通过线性地址读取 local APIC 的 ID 寄存器值。这条指令可能会产生多个异常。例如：它可能由于地址的 offset 值超过了 DS 的 limit 而产生#GP
+在上面的代码里，guest 尝试通过**线性地址**读取 local APIC 的 ID 寄存器值。这条指令可能会产生多个异常。例如：它可能由于地址的 offset 值超过了 DS 的 limit 而产生 `#GP` 异常，也可能由于线性地址而产生#PF 异常，也可能由于 guest-physical address 而产生  EPT violation 或者 EPT misconfiguration 导致 Vm-exit，也可能由于访问 APIC- access page 而产生 APIC- access VM-exit
+
+APIC- access Vm-exit 与其他 Vm-exit 及事件之间的优先级别如下（关于优先级别的描述另参见第 5.6 节、4.15 节以及 6.1.8.3 节）。
+
+APIC- access Vm-exit I 的优先级别低于 PF 异常、EPT violation 或者 EPT misconfiguration 故障。也就是说，当发生 PF 异常、EPT violation 或者 EPT misconfiguration 时不会产生 APIC- access VN-exit
+
+假如伴随着其他异常或事件（例如#GP, AC 或者 NP 异常）, APIC- access VM exit 的优先级别等同于#F 异常、EPT violation 或者 EPT misconfiguration 故障。
+
+假如产生 APIC- access Vm-exit，则直到处理器完成更新 paging structure（包括
+
+ guest paging structure 与 EPT paging structure）表项内的 diry 或者 accessed 标志位 后才响应 APIC- access VM-xit
+
+假如，在一条含有REP前的循环串指令里（如MOVS、INS/OUTS 等），在前面的 N 次循环里正常执行并没有产生 APIC- access VNexit 或者异常，但第 N+1 次可能会由于 ESI 或 EDI 指针的递增而产生 APIC- access VM-exit，则处理器记录当前的 ECX ESI 或 EDI 寄存器值。
+
+7.2.7 虚拟化读取 APIC- access page
+
+当“virtualize APIC accesses 为 1 时，启用 APIC- access page 页面。APIC- access page 页面物理地址提供在 APC- access address 字段里
+
+ guest 尝试线性读取 APIC- access page 页面内的值（参见 7.2.3 节）可能会产生下面的两种结果之一：
+
+ (1) 产生 APIC- access Vm-exit
+
+ (2) 返回 virtual- APIC page 页面（参见 7.2.5 节）内相应偏移量的虚拟 local APIC 寄存器值
+
+1. 产生 APIC- access VMexit
+
+属于下面情况之一时，访问 APIC- access page 页面内任何 offset 值都将产生 APIC  ccess Vm-exit
+
+当“use TPR shadow 位为 0 时（表示不存在 virtual- APIC page 页面）。
+
+尝试执行 APC- access page 页面（即尝试执行访问）。
+
+访问的数据 size 超过 32 位。例如，尝试读取 64 位数据。
+
+访问 APC- access page 页面的动作发生在虚拟化写 APIC- access page 页面操作的其中一个流程。例如，在虚拟化 TPR 操作时（即写 APIC- access page 页面 80H 位置），最后的步骤是进行 pending virtual- Interrupt 的 delivery 评估。当评估通过后
