--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
@@ -3,7 +3,7 @@
 
 (1) 尝试**线性访问**(GVA, 包括读和写) `APIC-access page` 页面内**不支持的 offset 位置**将产生 `APIC-access VM-exit`.
 
-* 当“use TPR shadow”为 0 时，所有的 offset 位置都不支持。
+* 当“use TPR shadow”为 0 时，**所有的 offset 位置**都**不支持**。
 
 * 当“use TPR shadow“为 1 时, 且“`APIC-register virtualization`“ 与 "`virtual- -Interrupt delivery`" 都为 **0** 时，仅有 offset 为 **80H** 位置(**TPR**)被支持
 
@@ -16,19 +16,19 @@
 
 (2) 尝试 **guest-physical** 访问(GPA, 包括读和写)`APIC-access page` 页面内**任何的 offset 位置**将产生 `APIC-access Vm-exit`.
 
-《Intel 手册》明确表明：guest 尝试 physical access（物理访问）APC-access page 页面**可能会**也**可能不会**产生 Vm-exit。当不产生 APIC-access Vm-exit 时，可能会访问到  virtual-APIC page 页面内的数据。
+(3) 《Intel 手册》明确表明：guest 尝试 physical access（物理访问）APC-access page 页面**可能会**也**可能不会**产生 Vm-exit。当不产生 APIC-access Vm-exit 时，可能会访问到  virtual-APIC page 页面内的数据。
 
 # APIC-access Vm-exit 优先级别
 
-当 guest 尝试访问 `APIC-access page` 页面时，可能会存在多个引发 Vm-exit 或其他事件的条件。例如下面的代码。
+当 guest 尝试访问 `APIC-access page` 页面时，可能会存在**多个**引发 Vm-exit 或其他事件的条件。例如下面的代码。
 
 ```
 mov eax,  [ebx + LAPIC_ID]  ;读取 APICID 值
 ```
 
-在上面的代码里，guest 尝试通过**线性地址**读取 local APIC 的 ID 寄存器值。这条指令可能会产生多个异常。例如：它可能由于地址的 offset 值超过了 DS 的 limit 而产生 `#GP` 异常，也可能由于线性地址而产生#PF 异常，也可能由于 guest-physical address 而产生  EPT violation 或者 EPT misconfiguration 导致 Vm-exit，也可能由于访问 APIC- access page 而产生 APIC- access VM-exit
+在上面的代码里，guest 尝试通过**线性地址**读取 local APIC 的 ID 寄存器值。这条指令可能会产生**多个异常**。例如：它可能由于地址的 **offset** 值**超过**了 DS 的 limit 而产生 `#GP` 异常，也可能由于**线性地址**而产生 `#PF` 异常，也可能由于 guest-physical address 而产生 EPT violation 或者 EPT misconfiguration 导致 Vm-exit，也可能由于访问 APIC- access page 而产生 APIC- access VM-exit
 
-APIC- access Vm-exit 与其他 Vm-exit 及事件之间的优先级别如下（关于优先级别的描述另参见第 5.6 节、4.15 节以及 6.1.8.3 节）。
+APIC-access Vm-exit 与其他 Vm-exit 及事件之间的优先级别如下（关于优先级别的描述另参见第 `5.6` 节、`4.15` 节以及 `6.1.8.3` 节）。
 
 APIC- access Vm-exit I 的优先级别低于 PF 异常、EPT violation 或者 EPT misconfiguration 故障。也就是说，当发生 PF 异常、EPT violation 或者 EPT misconfiguration 时不会产生 APIC- access VN-exit
 
