--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
@@ -32,32 +32,8 @@ APIC-access Vm-exit 与其他 Vm-exit 及事件之间的优先级别如下（关
 
 * APIC-access Vm-exit 的优先级别低于 `#PF` 异常、EPT violation 或者 EPT misconfiguration 故障。也就是说，当发生 #PF 异常、EPT violation 或者 EPT misconfiguration 时不会产生 `APIC-access VM-exit`.
 
-* 假如伴随着**其他异常**或**事件**（例如`#GP`, `#AC` 或者 `#NP` 异常）, APIC-access VM-exit 的优先级别等同于 #F 异常、EPT violation 或者 EPT misconfiguration 故障。
+* 假如伴随着**其他异常**或**事件**（例如`#GP`, `#AC` 或者 `#NP` 异常）, APIC-access VM-exit 的优先级别等同于 `#PF` 异常、EPT violation 或者 EPT misconfiguration 故障。
 
-假如产生 APIC- access Vm-exit，则直到处理器完成更新 paging structure（包括
+* 假如产生 APIC-access VM-exit，则**直到处理器完成更新** paging structure（包括 guest paging structure 与 EPT paging structure）表项内的 diry 或者 accessed 标志位 后才响应 APIC-access VM-exit
 
- guest paging structure 与 EPT paging structure）表项内的 diry 或者 accessed 标志位 后才响应 APIC- access VM-xit
-
-假如，在一条含有REP前的循环串指令里（如MOVS、INS/OUTS 等），在前面的 N 次循环里正常执行并没有产生 APIC- access VNexit 或者异常，但第 N+1 次可能会由于 ESI 或 EDI 指针的递增而产生 APIC- access VM-exit，则处理器记录当前的 ECX ESI 或 EDI 寄存器值。
-
-7.2.7 虚拟化读取 APIC- access page
-
-当“virtualize APIC accesses 为 1 时，启用 APIC- access page 页面。APIC- access page 页面物理地址提供在 APC- access address 字段里
-
- guest 尝试线性读取 APIC- access page 页面内的值（参见 7.2.3 节）可能会产生下面的两种结果之一：
-
- (1) 产生 APIC- access Vm-exit
-
- (2) 返回 virtual- APIC page 页面（参见 7.2.5 节）内相应偏移量的虚拟 local APIC 寄存器值
-
-1. 产生 APIC- access VMexit
-
-属于下面情况之一时，访问 APIC- access page 页面内任何 offset 值都将产生 APIC  ccess Vm-exit
-
-当“use TPR shadow 位为 0 时（表示不存在 virtual- APIC page 页面）。
-
-尝试执行 APC- access page 页面（即尝试执行访问）。
-
-访问的数据 size 超过 32 位。例如，尝试读取 64 位数据。
-
-访问 APC- access page 页面的动作发生在虚拟化写 APIC- access page 页面操作的其中一个流程。例如，在虚拟化 TPR 操作时（即写 APIC- access page 页面 80H 位置），最后的步骤是进行 pending virtual- Interrupt 的 delivery 评估。当评估通过后
+假如，在一条含有 REP 前的循环串指令里（如 MOVS、INS/OUTS 等），在前面的 N 次循环里正常执行并没有产生 APIC-access VM-exit 或者异常，但第 N+1 次可能会由于 ESI 或 EDI 指针的递增而产生 APIC-access VM-exit，则处理器记录当前的 ECX ESI 或 EDI 寄存器值。
