--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -45,7 +45,9 @@
 
 ![2021-01-03-13-49-02.png](./images/2021-01-03-13-49-02.png)
 
-当启用了`virtual-APIC page`和`use TPR shadow`后, 如上图 7-7 所示guest尝试线性访问 TPR 寄存器, 处理器返回的是 virtual-APIC page 页面内的 VTPR 寄存器值.
+注: 
+
+当启用了`virtual-APIC page`和`use TPR shadow`后, 如上图 7-7 所示guest尝试线性访问 TPR 寄存器, 处理器返回的是 `virtual-APIC page` 页面内的 VTPR 寄存器值.
 
 当 guest 尝试以 **guest-physical**(GPA) 方式访问 `APIC- access page` 页面时，**不能**得到 `virtual-APIC page` 页面内的虚拟寄存器数据，而是**产生 Vm-exit**。
 
