--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
@@ -16,7 +16,7 @@
 
 (2) 尝试 **guest-physical** 访问(GPA, 包括读和写)`APIC-access page` 页面内**任何的 offset 位置**将产生 `APIC-access Vm-exit`.
 
-(3) 《Intel 手册》明确表明：guest 尝试 physical access（物理访问）APC-access page 页面**可能会**也**可能不会**产生 Vm-exit。当不产生 APIC-access Vm-exit 时，可能会访问到  virtual-APIC page 页面内的数据。
+(3) 《Intel 手册》明确表明：guest 尝试 **physical access**（物理访问）APC-access page 页面**可能会**也**可能不会**产生 Vm-exit。当不产生 APIC-access Vm-exit 时，可能会访问到  virtual-APIC page 页面内的数据。
 
 # APIC-access Vm-exit 优先级别
 
