--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -9,6 +9,7 @@
   - [2.2. guest-physical access（虚拟机物理地址访问）](#22-guest-physical-access虚拟机物理地址访问)
   - [2.3. physical access(物理访问)](#23-physical-access物理访问)
 - [3. APIC-access page 的设置](#3-apic-access-page-的设置)
+- [4. 对于 APIC-access page 的读写](#4-对于-apic-access-page-的读写)
 
 <!-- /code_chunk_output -->
 
@@ -16,7 +17,7 @@
 
 **引入 APIC-access page**，目的是**监控 guest 访问 local APIC**（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 `EPT violation` 或者 `MSR bitmap` 实现）
 
-当`“virtualize APIC accesses”`位为 1 时，虚拟化基于**内存映射**（memory mapped）的方式访问 local APIC 寄存器。
+当`“virtualize APIC accesses”`位为 1 时，虚拟化基于**内存映射**（memory mapped）的方式访问 local APIC 寄存器, 即**apic/xapic模式**。
 
 引入了一个被称为`“APIC-access page”`（APC 访问页面）的 **4K 页面**来对应物理的 **local APIC 页面**。
 
@@ -197,3 +198,7 @@ DoWriteMsrForApicBase.SetApicAccessPage:
 
 通过在 `VM-exit MSR-load` 列表里增加 `IA32_APIC_BASE` 寄存器数据来恢复 host 原值. 然而, 由于 VMM 监控了 guest 尝试更改 `IA32_APIC_BASE` 寄存器的操作。实际上, **IA32_APIC_BASE 寄存器并没有被修改过**。在这种情况下，恢复 host IA32_APIC_BASE 寄存器操作不是必需的！
 
+
+# 4. 对于 APIC-access page 的读写
+
+见下面 `7.2.7` 和 `7.2.8`
