--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
@@ -1,4 +1,12 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [虚拟化 x2APIC MSR 组](#虚拟化-x2apic-msr-组)
+
+<!-- /code_chunk_output -->
+
 # 虚拟化 x2APIC MSR 组
 
 在 x2APIC 模式里，local APIC 寄存器被映射到 **MSR 地址空间**从 `800H` 到 `8FFH` 的区域。软件通过 RDMSR 与 WRMSR 指令读写 MSR 寄存器来访问 local APIC 寄存器。
@@ -7,7 +15,7 @@ VMM 可以通过下面两种方式来虚拟化 x2APIC 模式的 local APIC:
 
  (1) 当"`virtualize x2APIC mode`" 位为 **0** 时，通过设置 **MSR bitmap** 来监控 guest 访问 local APIC，从而达到虚拟化 local APIC
 
- (2) 当“`virtualize x2APIC mode`”位为 **1** 时，使用 VMX 提供的原生(native)虚拟化 **x2APIC** 模式 local APIC。处理器将拟化 guest 基于 **MSR** 访问 local APIC 寄存器。
+ (2) 当“`virtualize x2APIC mode`”位为 **1** 时，使用 VMX 提供的**原生**(native)虚拟化 **x2APIC** 模式 local APIC。处理器将拟化 guest 基于 **MSR** 访问 local APIC 寄存器。
 
 当虚拟化 x2APIC 模式 local APIC 时，**不存在 APIC-access page 页面！** `APIC-access page` 页仅存在于使用 VMX 原生的（native）基于**内存映射**访问 local APIC 的虚拟化中。
 
