--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
@@ -17,7 +17,7 @@ VMM 可以通过下面两种方式来虚拟化 x2APIC 模式的 local APIC:
 
  (2) 当“`virtualize x2APIC mode`”位为 **1** 时，使用 VMX 提供的**原生**(native)虚拟化 **x2APIC** 模式 local APIC。处理器将拟化 guest 基于 **MSR** 访问 local APIC 寄存器。
 
-当虚拟化 x2APIC 模式 local APIC 时，**不存在 APIC-access page 页面！** `APIC-access page` 页仅存在于使用 VMX 原生的（native）基于**内存映射**访问 local APIC 的虚拟化中。
+当虚拟化 **x2APIC** 模式 local APIC 时，**不存在 APIC-access page 页面！** `APIC-access page` 页仅存在于使用 VMX 原生的（native）基于**内存映射**访问 local APIC 的虚拟化中。
 
 >注意：“virtualize APIC-accesses"与 "virtualize x2APIC mode" 位不能同时设为 1 值。也就是 local APIC 不能同时使用 xAPIC 与 x2APIC 两种模式
 
