--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
@@ -3,11 +3,11 @@
 
 <!-- code_chunk_output -->
 
-- [虚拟化 x2APIC MSR 组](#虚拟化-x2apic-msr-组)
+- [x2APIC 模式以及虚拟化](#x2apic-模式以及虚拟化)
 
 <!-- /code_chunk_output -->
 
-# 虚拟化 x2APIC MSR 组
+# x2APIC 模式以及虚拟化
 
 在 x2APIC 模式里，local APIC 寄存器被映射到 **MSR 地址空间**从 `800H` 到 `8FFH` 的区域。软件通过 RDMSR 与 WRMSR 指令读写 MSR 寄存器来访问 local APIC 寄存器。
 
