--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -15,7 +15,7 @@
 
 # 1. virtualize APIC accesses机制
 
-**引入 APIC-access page**，目的是**监控 guest 访问 local APIC**（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 `EPT violation` 或者 `MSR bitmap` 实现）
+**引入 APIC-access page**，目的是**监控 guest 访问 local APIC**（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 `EPT violation`实现）
 
 当`“virtualize APIC accesses”`位为 1 时，虚拟化基于**内存映射**（memory mapped）的方式访问 local APIC 寄存器, 即**apic/xapic模式**。
 
@@ -78,7 +78,7 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 
 # 3. APIC-access page 的设置
 
-**引入 APIC-access page**，目的是监控 guest 访问 local APIC（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 `EPT violation` 或者 `MSR bitmap` 实现）
+**引入 APIC-access page**，目的是监控 guest 访问 local APIC（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 `EPT violation`实现）
 
 显然，我们需要将 `APIC-access page` 页面的**物理地址**设置为 `APIC-page` 的物理地址. 当 guest 尝试线性访问 local APIC 时，会落入 `APC-access page` 页面内。
 
