--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
@@ -3,11 +3,13 @@
 
 <!-- code_chunk_output -->
 
-- [x2APIC 模式以及虚拟化](#x2apic-模式以及虚拟化)
+- [1. x2APIC 模式以及虚拟化](#1-x2apic-模式以及虚拟化)
+- [2. 监控 guest 访问 local APIC MSR: MSR bitmap](#2-监控-guest-访问-local-apic-msr-msr-bitmap)
+- [3. 处理访问 local APIC MSR](#3-处理访问-local-apic-msr)
 
 <!-- /code_chunk_output -->
 
-# x2APIC 模式以及虚拟化
+# 1. x2APIC 模式以及虚拟化
 
 在 x2APIC 模式里，local APIC 寄存器被映射到 **MSR 地址空间**从 `800H` 到 `8FFH` 的区域。软件通过 RDMSR 与 WRMSR 指令读写 MSR 寄存器来访问 local APIC 寄存器。
 
@@ -21,9 +23,11 @@ VMM 可以通过下面两种方式来虚拟化 x2APIC 模式的 local APIC:
 
 >注意：“virtualize APIC-accesses"与 "virtualize x2APIC mode" 位不能同时设为 1 值。也就是 local APIC 不能同时使用 xAPIC 与 x2APIC 两种模式
 
-1. 监控 guest 访问 local APIC MSR
+# 2. 监控 guest 访问 local APIC MSR: MSR bitmap
 
-在前面的例子 7-3 里，我们学习了如何利用 EPT violation 故障来监控 guest 访问 local APIC 页面。当 "`virtualize x2APIC mode`" 位为 **0** 时，我们也利用 **MSR bitmap** 来监控 guest 访问 local APIC MSR.
+在前面的例子 7-3 里，我们学习了如何利用 EPT violation 故障来监控 guest 访问 local APIC 页面。
+
+当 "`virtualize x2APIC mode`" 位为 **0** 时，我们也利用 **MSR bitmap** 来监控 guest 访问 local APIC MSR.
 
 ```x86asm
 
@@ -31,8 +35,8 @@ VMM 可以通过下面两种方式来虚拟化 x2APIC 模式的 local APIC:
 
 上面的代码片段出现在前面介绍过的 DoWritemsrforapic Base 例程里。它检查  virtualize x2APIC mode”位是否为 1, 为 0 时调用 set msr read bitmap for x2apic 与  set msr write_ bitmap for x2apic 函数设置 local APIC MSR 对应的读/写 MSR bitmap（参见 3.5.15 节）
 
-2. 处理访问 local APIC MSR
+# 3. 处理访问 local APIC MSR
 
-当 guest 使用 RDMSR 与 WRMSR 指令访问 local APIC MSR 时，由于我们已经在  MSR bitmap 里设置了拦截功能而产生 Vm-exit。VMM 应该根据 local APIC 的虚似化操作流程来处理这个 VM-exit（参见下面的 72.7 与 72.8 节）。
+当 guest 使用 RDMSR 与 WRMSR 指令访问 local APIC MSR 时，由于我们已经在 MSR bitmap 里设置了拦截功能而产生 Vm-exit。VMM 应该根据 local APIC 的虚似化操作流程来处理这个 VM-exit（参见下面的 72.7 与 72.8 节）。
 
 这里没有实现例子完成处理访问 local APIC MSR，这个工作留待读者自行完成。
