--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -3,11 +3,12 @@
 
 <!-- code_chunk_output -->
 
-- [](#)
+- [virtual-APIC page 机制](#virtual-apic-page-机制)
+- [虚拟 local APC 寄存器](#虚拟-local-apc-寄存器)
 
 <!-- /code_chunk_output -->
 
-# 
+# virtual-APIC page 机制
 
 当“`use TPR shadow`”为 1 时，引入了一个被称为“`virtual-APIC page`”的**影子页面**(shadow page)。这个影子页面与物理 APIC page 样是 4K 大小，是 local APIC 的虚拟页面。
 
@@ -23,7 +24,7 @@
 
 注意：无论是虚拟化 **xAPIC** 模式还是 **x2APIC** 模式，都会存在 `virtual-APIC page` 页面; 而 `APIC-access page`页面仅仅在 xapic 模式中存在.
 
-1. 虚拟 local APC 寄存器
+# 虚拟 local APC 寄存器
 
 `virtual-APIC page` 页面内存在物理 local APIC 对应的一份虚拟寄存器。表 7-2 列出了可访问的虚拟 local APIC 寄存器.
 
