--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -3,12 +3,14 @@
 
 <!-- code_chunk_output -->
 
-- [virtual-APIC page 机制](#virtual-apic-page-机制)
-- [虚拟 local APC 寄存器](#虚拟-local-apc-寄存器)
+- [1. virtual-APIC page 机制](#1-virtual-apic-page-机制)
+- [2. 虚拟 local APC 寄存器](#2-虚拟-local-apc-寄存器)
+- [3. APIC-access page 与 virtual-APIC page 的关系](#3-apic-access-page-与-virtual-apic-page-的关系)
+- [4. Local APIC MSR 与 virtual-APIC page 的关系](#4-local-apic-msr-与-virtual-apic-page-的关系)
 
 <!-- /code_chunk_output -->
 
-# virtual-APIC page 机制
+# 1. virtual-APIC page 机制
 
 当“`use TPR shadow`”为 1 时，引入了一个被称为“`virtual-APIC page`”的**影子页面**(shadow page)。这个影子页面与物理 APIC page 样是 4K 大小，是 local APIC 的虚拟页面。
 
@@ -24,7 +26,7 @@
 
 注意：无论是虚拟化 **xAPIC** 模式还是 **x2APIC** 模式，都会存在 `virtual-APIC page` 页面; 而 `APIC-access page`页面仅仅在 xapic 模式中存在.
 
-# 虚拟 local APC 寄存器
+# 2. 虚拟 local APC 寄存器
 
 `virtual-APIC page` 页面内存在物理 local APIC 对应的一份虚拟寄存器。表 7-2 列出了可访问的虚拟 local APIC 寄存器.
 
@@ -42,13 +44,13 @@
 
 部分 local APIC 对应的虚拟寄存器是**不可访问**的，譬如偏移量为 **AOH** 的 **VPPR**(`virtual processor-priority register`，**虚拟处理器优先级别寄存器**）。尝试访问则产生 VM-exit。
 
-2. APIC-access page 与 virtual-APIC page 的关系
+# 3. APIC-access page 与 virtual-APIC page 的关系
 
 `APIC-access page` 与 `virtual-APIC page` 之间的关系类似于**页映射**中的**虚拟地址**与**物理地址**。当 **guest** 尝试**线性**访问 `APIC-access page` 页面时（**不**包括 **guest-physical 访问**与**物理访问**），实际上访问了 `virtual-APIC page` 页面的数据。如图 7-7 所示。
 
 ![2021-01-03-13-49-02.png](./images/2021-01-03-13-49-02.png)
 
-注: `APIC-access page` 到 `virtual-APIC page` 没有转换关系, 具体读写
+注: `APIC-access page` 到 `virtual-APIC page` 没有转换关系, 具体读写`APIC-access page`见下面
 
 当启用了`virtual-APIC page`和`use TPR shadow`后, 如上图 7-7 所示guest尝试线性访问 TPR 寄存器, 处理器返回的是 `virtual-APIC page` 页面内的 VTPR 寄存器值.
 
@@ -56,6 +58,6 @@
 
 以物理方式(HPA)访间时**可能会访问到**, 也可能会产生 `VM-exit`.
 
-3. Local APIC MSR 与 virtual-APIC page 的关系
+# 4. Local APIC MSR 与 virtual-APIC page 的关系
 
-当使用 x2APIC 模式虚拟化机制时，guest 访问 local APIC MSR 同样访问到 `virtual-APIC page` 页面内的虚拟寄存器。如同图 7-7 所示，所不同的是通过 MSR 来访问 local APIC 物理页面。
+当使用 **x2APIC** 模式虚拟化机制时，guest 访问 local APIC **MSR** 同样访问到 `virtual-APIC page` 页面内的虚拟寄存器。如同图 7-7 所示，所不同的是通过 MSR 来访问 local APIC 物理页面。
