--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
@@ -1,5 +1,16 @@
 
-当"`virtualize APIC accesses`" 为 1 时，guest 尝试进行下面的访问将产生 VM-exit, 这个 VM-exit 可称为 "APIC- access Vm-exit"。
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [产生 APIC-access Vm-exit](#产生-apic-access-vm-exit)
+- [APIC-access Vm-exit 优先级别](#apic-access-vm-exit-优先级别)
+
+<!-- /code_chunk_output -->
+
+# 产生 APIC-access Vm-exit
+
+当"`virtualize APIC accesses`" 为 1 时，guest 尝试进行下面的访问将产生 VM-exit, 这个 VM-exit 可称为 "APIC-access Vm-exit"。
 
 (1) 尝试**线性访问**(GVA, 包括读和写) `APIC-access page` 页面内**不支持的 offset 位置**将产生 `APIC-access VM-exit`.
 
