--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
@@ -3,14 +3,19 @@
 
 <!-- code_chunk_output -->
 
-- [产生 APIC-access Vm-exit](#产生-apic-access-vm-exit)
-- [APIC-access Vm-exit 优先级别](#apic-access-vm-exit-优先级别)
+- [1. 产生 APIC-access Vm-exit](#1-产生-apic-access-vm-exit)
+  - [1.1. linear access(线性访问)](#11-linear-access线性访问)
+  - [1.2. guest-physical access(虚拟机物理地址访问)](#12-guest-physical-access虚拟机物理地址访问)
+  - [1.3. physical access(物理访问)](#13-physical-access物理访问)
+- [2. APIC-access Vm-exit 优先级别](#2-apic-access-vm-exit-优先级别)
 
 <!-- /code_chunk_output -->
 
-# 产生 APIC-access Vm-exit
+# 1. 产生 APIC-access Vm-exit
 
 当"`virtualize APIC accesses`" 为 1 时，guest 尝试进行下面的访问将产生 VM-exit, 这个 VM-exit 可称为 "APIC-access Vm-exit"。
+
+## 1.1. linear access(线性访问)
 
 (1) 尝试**线性访问**(GVA, 包括读和写) `APIC-access page` 页面内**不支持的 offset 位置**将产生 `APIC-access VM-exit`.
 
@@ -25,11 +30,15 @@
 
 * 当“use TPR shadow 为 1, 且“APIC- register virtualization 为 1 时，表 7-2 中所列的所有 offset。位置可访问。
 
+## 1.2. guest-physical access(虚拟机物理地址访问)
+
 (2) 尝试 **guest-physical** 访问(GPA, 包括读和写)`APIC-access page` 页面内**任何的 offset 位置**将产生 `APIC-access Vm-exit`.
+
+## 1.3. physical access(物理访问)
 
 (3) 《Intel 手册》明确表明：guest 尝试 **physical access**（物理访问）APC-access page 页面**可能会**也**可能不会**产生 Vm-exit。当不产生 APIC-access Vm-exit 时，可能会访问到  virtual-APIC page 页面内的数据。
 
-# APIC-access Vm-exit 优先级别
+# 2. APIC-access Vm-exit 优先级别
 
 当 guest 尝试访问 `APIC-access page` 页面时，可能会存在**多个**引发 Vm-exit 或其他事件的条件。例如下面的代码。
 
