--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/7. 虚拟化读取APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/7. 虚拟化读取APIC-access page.md
@@ -2,7 +2,7 @@
 
 当“virtualize APIC accesses 为 1 时，启用 `APIC-access page` 页面。`APIC-access page` 页面物理地址提供在 `APIC-access address` 字段里
 
-guest 尝试线性读取 APIC-access page 页面内的值（参见 7.2.3 节）可能会产生下面的两种结果之一：
+guest 尝试**线性**读取 APIC-access page 页面内的值（参见 7.2.3 节）可能会产生下面的两种结果之一：
 
 (1) 产生 `APIC-access VM-exit`
 
