--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/7. 虚拟化读取APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/7. 虚拟化读取APIC-access page.md
@@ -1,6 +1,7 @@
 
+# 1. 
 
-当“virtualize APIC accesses 为 1 时，启用 `APIC-access page` 页面。`APIC-access page` 页面物理地址提供在 `APIC-access address` 字段里
+当 "`virtualize APIC accesses`" 为 1 时，启用 `APIC-access page` 页面。`APIC-access page` 页面物理地址提供在 `APIC-access address` 字段里
 
 guest 尝试**线性**读取 APIC-access page 页面内的值（参见 7.2.3 节）可能会产生下面的两种结果之一：
 
@@ -8,7 +9,7 @@ guest 尝试**线性**读取 APIC-access page 页面内的值（参见 7.2.3 节
 
 (2) 返回 `virtual-APIC page` 页面（参见 7.2.5 节）内**相应偏移量**的虚拟 local APIC 寄存器值
 
-1. 产生 APIC-access VM-exit
+# 2. 产生 APIC-access VM-exit
 
 属于下面**情况之一**时，访问 APIC-access page 页面内**任何 offset 值**都将产生 `APIC-access VM-exit`
 
@@ -28,7 +29,7 @@ guest 尝试**线性**读取 APIC-access page 页面内的值（参见 7.2.3 节
 
 注：64 位或者 256 位的 local APIC 寄存器（加 ICR、IR）在 APIC-page 内被拆分为多个 32 位的寄存器，这些寄存器都是对齐在 16 位字节边界上
 
-2. 返回 virtual-APIC page 页面数据
+# 3. 返回 virtual-APIC page 页面数据
 
 当不是由于上述的原因产生 APIC-access VM-exit 时，取决于 secondary processor-based Vm-execution control 字段的 “`APIC-register virtualization`" 位的设置，guest 尝试**线性读取！！！** APIC-access page 页面，将返回 virtual-APIC page 页面的虚拟寄存器值（参见 7.2.5 节）。
 
