--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/7. 虚拟化读取APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/7. 虚拟化读取APIC-access page.md
@@ -1,9 +1,19 @@
 
-# 1. 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
-当 "`virtualize APIC accesses`" 为 1 时，启用 `APIC-access page` 页面。`APIC-access page` 页面物理地址提供在 `APIC-access address` 字段里
+<!-- code_chunk_output -->
 
-guest 尝试**线性**读取 APIC-access page 页面内的值（参见 7.2.3 节）可能会产生下面的两种结果之一：
+- [1. APIC-access page以及其访问](#1-apic-access-page以及其访问)
+- [2. 产生 APIC-access VM-exit](#2-产生-apic-access-vm-exit)
+- [3. 返回 virtual-APIC page 页面数据](#3-返回-virtual-apic-page-页面数据)
+
+<!-- /code_chunk_output -->
+
+# 1. APIC-access page以及其访问
+
+当 "`virtualize APIC accesses`" 为 1 时，启用 `APIC-access page` 页面。`APIC-access page` 页面物理地址提供在 `APIC-access address` 字段里.
+
+guest 尝试**线性**读取 APIC-access page 页面内的值（参见 7.2.3 节）可能会产生下面的**两种结果之一**：
 
 (1) 产生 `APIC-access VM-exit`
 
