--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
@@ -239,17 +239,17 @@ IA32\_PERF\_GLOBAL_CTRL寄存器中的**每一位都是enable位**。
 
 # 7. 固定用途计数控制器
 
-**3个fixed\-function计数器**IA32\_FIXED\_CTR0到IA32\_FIXED\_CTR2的开启还需要**各自对应的IA32\_FIXED\_CTR\_CTRL寄存器来控制**，如下所示。
+**3个fixed\-function计数器** `IA32\_FIXED\_CTR0` 到`IA32\_FIXED\_CTR2` 的开启还需要`IA32\_FIXED\_CTR\_CTRL`寄存器来控制，如下所示。
 
 ![config](./images/9.jpg)
 
-在IA32\_FIXED\_CTR\_CTRL寄存器里分为**三个部分**，分别控制0、1及2号Fixedfunction计数器。
+在IA32\_FIXED\_CTR\_CTRL寄存器里分为**三个部分**，分别控制0、1及2号Fixed function计数器。
 
-① **bit3到bit0**：控制IA32\_FIXED\_CTR0寄存器。
+① `bit [3:0]`：控制IA32\_FIXED\_CTR0寄存器。
 
-② bit7到bit4：控制IA32\_FIXED\_CTR1寄存器。
+② `bit [7:4]`：控制IA32\_FIXED\_CTR1寄存器。
 
-③ bit11到bit8：控制IA32\_FIXED\_CTR2寄存器。
+③ `bit [11:8]`：控制IA32\_FIXED\_CTR2寄存器。
 
 ## 7.1. EN域
 
