--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -4,7 +4,9 @@
 
 因此，一个外部中断不能引起虚拟中断的评估与 delivery。外部中断是指
 
-由 local APIC 的 LVT 奇存器产生的本地中断（例如由 LVT timer、LVT perfmon 产生的中断）。
+* 由 local APIC 的 LVT 奇存器产生的本地中断（例如由 LVT timer、LVT perfmon 产生的中断）。
 
-local APIC 接收到的外部中断请求。包括 8259 中断控制器发出的中断请求，O APIC 中断控制器发出的中断消息，以及 IPI（处理器间的中断消息）。
+* local APIC 接收到的外部中断请求。包括 8259 中断控制器发出的中断请求，I/O APIC 中断控制器发出的中断消息，以及 IPI（处理器间的中断消息）。
+
+
 
