--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -50,22 +50,23 @@ do_tpr_virtualization()
 
 如上面伪代码所示，处理器执行下面的 TPR 虚拟化处理：
 
-* 当“virtual-interrupt delivery”为 1 时。
+* 当“`virtual-interrupt delivery`”为 1 时。
     
     * 引发下一步 PR 虚拟化的执行（参见 7.2.12.2 节）。
 
-    * 接着进行 virtual- interrupt I 的评估及 delivery 操作（参见 7.2.3 节）。
+    * 接着进行 `virtual-interrupt` 的评估及 delivery 操作（参见 7.2.3 节）。
 
-* 当“virtual-interrupt delivery”为 0 时。
-    * 处理器检查到写入 VTPR 的 bits7:4 值低于 TPR threshold 字段值 bis3:0 时，将产生 VM-exit（参见 3.5.11 与 5.3 节）。
+* 当“`virtual-interrupt delivery`”为 0 时。
 
-由 TPR 低于 threshold 而产生的“TPR beblow threshold VM-exit”属于 trap 类型的 VM-exit 事件（参见 5.10 节相关描述）
+    * 处理器检查到写入 VTPR 的 `bits 7:4` 值低于 TPR threshold 字段值 bis3:0 时，将产生 VM-exit（参见 3.5.11 与 5.3 节）。
+
+由 TPR 低于 threshold 而产生的“TPR beblow threshold VM-exit”属于 **trap** 类型的 VM-exit 事件（参见 5.10 节相关描述）
 
 # PPR 虚拟化
 
-PPR (processor priority register）是只读寄存器，不能通过写 VPPR 发起 PPR 虚拟化操作。如前面第 7.2.12 节所述，能引发 PPR 虚拟化的是 TPR 虚拟化、EOI 虚拟化及 VM-entry 这三种途径。
+PPR (**processor priority register**）是**只读寄存器**，**不能**通过写 VPPR 发起 PPR 虚拟化操作。如前面第 7.2.12 节所述，能引发 **PPR 虚拟化**的是 **TPR 虚拟化**、**EOI 虚拟化**及 `VM-entry` 这三种途径。
 
-PPR 虚拟化执行更新 VPPR 动作。VPPR 的更新取决于 guest Interrupt status 字段中的 SVl (Servicing virtual interrupt）状态值（参见 3.8.11 节）和 VTPR 值，取两者的最大值。 
+PPR 虚拟化执行更新 **VPPR** 动作。VPPR 的更新取决于 guest Interrupt status 字段中的 SVl (Servicing virtual interrupt）状态值（参见 3.8.11 节）和 VTPR 值，取两者的最大值。 
 
 ```cpp
 do_ppr_virtualization()
