--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -66,12 +66,11 @@ do_tpr_virtualization()
 
 PPR (**processor priority register**）是**只读寄存器**，**不能**通过写 VPPR 发起 PPR 虚拟化操作。如前面第 7.2.12 节所述，能引发 **PPR 虚拟化**的是 **TPR 虚拟化**、**EOI 虚拟化**及 `VM-entry` 这三种途径。
 
-PPR 虚拟化执行更新 **VPPR** 动作。VPPR 的更新取决于 guest Interrupt status 字段中的 SVl (Servicing virtual interrupt）状态值（参见 3.8.11 节）和 VTPR 值，取两者的最大值。 
+PPR 虚拟化执行更新 **VPPR** 动作。**VPPR 的更新**取决于 guest interrupt status 字段中的 **SVI** (`Servicing virtual interrupt`）状态值（参见 3.8.11 节）和 **VTPR** 值，取两者的最大值。 
 
 ```cpp
 do_ppr_virtualization()
 {
-
     /* 更新 VPPR 值 */
     if (TPR [7:4] >= SVI[7:4])
     {
@@ -88,41 +87,42 @@ do_ppr_virtualization()
 
 * 更新 VTPR 值
 
-    * 当 VTPRI7:4 大于或等于 SV7:4 时，使用 VTPR 来更新 VPPR
+    * 当 `VTPR[7:4]` 大于或等于 `SVI[7:4]` 时，使用 VTPR 来更新 VPPR
 
-    * 当 VTPR7:4] 低于 SVI7:4] 时，使用 SVI 来更新 VPPR.
+    * 当 `VTPR[7:4]` 低于 `SVI[7:4]` 时，使用 SVI 来更新 VPPR.
 
-* 清 VPPR 的 bis31:8 值
+* 清 VPPR 的 bis 31:8 值
 
-注意：在 virtual-Interrupt 的 delivery 操作里，处理器修改 SVI、VISR 以及 RVI 值不会引发 PPR 虚拟化（尽管处理器也修改 VPPR 值，但不属于 PPR 虚拟化操作）。
+注意：在 virtual-interrupt 的 delivery 操作里，处理器修改 SVI、VISR 以及 RVI 值不会引发 PPR 虚拟化（尽管处理器也修改 VPPR 值，但不属于 PPR 虚拟化操作）。
 
 # EOI虚拟化
 
-在**一个中断例程返回前**应该向**中断控制器**（例如 8259、local APIC）发送 **EOI** 命令, EOI 命令引发中断控制器进行一些**复位**或者**更新状态**工作（如清中断 In-service 位）, 以便为下一个中断例程服务。
+在**一个中断例程返回前**应该向**中断控制器**（例如 8259、local APIC）发送 **EOI** 命令, EOI 命令引发中断控制器进行一些**复位**或者**更新状态**工作（如清中断 `In-service` 位）, 以便为下一个中断例程服务。
 
-EOI 命令的发送被假设在中断例程内执行，EOI 虚拟化需要在 virtual-interrupt（虚拟中断）例程内进行，因此，引发 EOI 虚拟化的前提是“virtual-interrupt delivery”位为 1。
+EOI 命令的发送被假设在中断例程内执行，EOI 虚拟化需要在 virtual-interrupt（虚拟中断）例程内进行，因此，引发 EOI 虚拟化的前提是 “virtual-interrupt delivery” 位为 1。
 
-处理器在完成写入 virtual-APIC page 页面偏移量 BOH 的 VEOI 后（前面第 7,212 节所述的两种途径），执行 EOI 虚拟化操作
+处理器在完成写入 `virtual-APIC page` 页面偏移量 **B0H** 的 VEOI 后（前面第 7,212 节所述的两种途径），执行 EOI 虚拟化操作
 
 ```cpp
 do_eoi_virtualization()
 {
-    vector = SVI; /* 当前正在运行的中断例程向量号 */
-
+    vector = SVI;       /* 当前正在运行的中断例程向量号 */
     VISR[vector] = 0;   /* 清 VISR 对应位 */
 
     /* 更新 SVI 值 */
-    if(VISR != 0)
+    if(VISR != 0){
+        SVI= get_highest_index_of_bitset(VISR); /* 得到VISR中为1位的最高 index 值 */
+    }else {
+        SVI =0; /* 不存在中断例程的嵌套，则 SVI 为 0 */
+    }
 
-svI= get_highest_ index_of_ bitsetVISR);/得到VISR中为1位的最高 i ndex
+    do_ppr_virtualization();    /* 执行 PPR 虚拟化 */
 
- SVI =0; /不存在中断例程的嵌套，则 SI 为 0/
+    if(eoi_exit_bitmap[vector] == 1){
+        
+    }
 
- do_ppr_virtualization 执行 PPR 虚拟化章/
 
- if  (eo_exit_bitmap [vector] = 1)
-
-由于 EI- exit bitmap 而产生 WM-exit
 
  do-vmexit_processing (EXIT_NUMBER_EOI)  else
 
