--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -119,29 +119,26 @@ do_eoi_virtualization()
     do_ppr_virtualization();    /* 执行 PPR 虚拟化 */
 
     if(eoi_exit_bitmap[vector] == 1){
-        
+        /* 由于 EOI-exit bitmap 而产生 VM-exit */
+        do_vmexit_processing(EXIT_NUMBER_EOI);
+    }else {
+        /* 执行 pending virtual- interrupt delivery 评估 */
+    do_evaluate_virtual_interrupt():
     }
-
-
-
- do-vmexit_processing (EXIT_NUMBER_EOI)  else
-
-执行 pending virtual- interrupt delivery 评估
-
- do_evaluate_virtual_interrupt:
+}
 ```
 
 如上面伪码所示，处理器执行下面的 EOI 虚拟化处理：
 
-* 清 VISR 的 In- service 位。当虚拟中断例程发送 EO 命令时，处理器将清向量号(由 SVI 指示)在 VISR 对应的位。表示正在执行的虚拟中断例程已经结東，可以执行另一个虚拟中断例程.
+* 清 VISR 的 In-service 位。当虚拟中断例程发送 EOI 命令时，处理器将清向量号(由 **SVI** 指示)在 VISR 对应的位。表示**正在执行的虚拟中断例程已经结束**，**可以执行另一个虚拟中断例程**.
 
 * 更新 SVI 值。
 
-    * 当 VISR 的值为 0 时，表示目前没有虚拟中断例程的嵌套（即低优先级的中断例程被高优先级中断例程所中断），当前的 In- service 列表为空，SV 被设为 0 值
+    * 当 VISR 的值为 0 时，表示目前**没有虚拟中断例程的嵌套**（即**低优先级的中断例程被高优先级中断例程所中断**），当前的 In-service 列表为空, SVI 被设为 0 值.
 
-    * 当 VISR 的值不为 0 时，处理器从 VISR 中取出优先级别最高的虚拟中断例程向量号，将这个向量号赋予 SV。指示下一个正在运行的虚拟中断例程。
+    * 当 VISR 的值**不为 0** 时，处理器从 VISR 中取出**优先级别最高**的虚拟中断例程向量号，将这个向量号赋予 SVI。指示下一个**正在运行的虚拟中断例程**。
     
-* 接着进行 PR 虚拟化处理（参见 7.2.12.2 节）。
+* 接着进行 PPR 虚拟化处理（参见 7.2.12.2 节）。
 
 * 检查 EOI-exit bitmap 字段（参见 3.5.12 节），决定是否产生 VM-exit
 
