--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -99,7 +99,7 @@ do_ppr_virtualization()
 
 在**一个中断例程返回前**应该向**中断控制器**（例如 8259、local APIC）发送 **EOI** 命令, EOI 命令引发中断控制器进行一些**复位**或者**更新状态**工作（如清中断 `In-service` 位）, 以便为下一个中断例程服务。
 
-EOI 命令的发送被假设在中断例程内执行，EOI 虚拟化需要在 virtual-interrupt（虚拟中断）例程内进行，因此，引发 EOI 虚拟化的前提是 “virtual-interrupt delivery” 位为 1。
+EOI 命令的发送被假设在**中断例程内执行**，EOI 虚拟化需要在 virtual-interrupt（虚拟中断）例程内进行，因此，引发 EOI 虚拟化的前提是 “`virtual-interrupt delivery`” 位为 1。
 
 处理器在完成写入 `virtual-APIC page` 页面偏移量 **B0H** 的 VEOI 后（前面第 7,212 节所述的两种途径），执行 EOI 虚拟化操作
 
@@ -140,10 +140,10 @@ do_eoi_virtualization()
     
 * 接着进行 **PPR 虚拟化**处理（参见 7.2.12.2 节）。
 
-* 检查 EOI-exit bitmap 字段（参见 3.5.12 节），决定是否产生 VM-exit
+* 检查 `EOI-exit bitmap` 字段（参见 3.5.12 节），决定是否产生 VM-exit
 
     * 当发送 EOI 命令的虚拟中断向量号在 EOI-exit bitmap 字段对应位为 1 时，产生 VM-exit。
-    * 否则进行 virtual- interrupt I 的评估及 delivery 操作。
+    * 否则进行 virtual-interrupt 的评估及 delivery 操作。
 
 如上所述，EOI 虚拟化使用 SV (servicing virtual-Interrupt）状态值来进行虚拟中断例程的收尾工作，并且更新 SV 值，以便于处理器服务下一个虚拟中断例程
 
@@ -151,31 +151,33 @@ do_eoi_virtualization()
 
 # Self-IPI 虚拟化
 
-引发 Self-IPI 虚拟化操作是由于 guest 线性写 APC- access page 页面偏移量 300H 位置，或者执行 WRMSR 指令写 1A32X2 APIC SELF IPI 寄存器（ECX=83FH）。同样，能引发 Sclf-IPI 虚拟化的前提是“virtual-interrupt delivery”位为 1。
+引发 Self-IPI 虚拟化操作是由于 guest 线性写 APC access page 页面偏移量 **300H** 位置，或者执行 WRMSR 指令写 1A32X2 APIC SELF IPI 寄存器（ECX=83FH）。同样，能引发 Sclf-IPI 虚拟化的前提是“virtual-interrupt delivery”位为 1。
 
-当处理器完成写入 virtual- APIC page 页面的 300H 或者 3FOH (1A32X2 APIC SELF IPI）位置后，执行 Self-ipi 虚拟化处理。 
+当处理器完成写入 virtual-APIC page 页面的 300H 或者 3FOH (1A32X2 APIC SELF IPI）位置后，执行 Self-ipi 虚拟化处理。 
 
+```cpp
+do_self_ipi_virtualization()
+{
+    vector = VICR[7:0]; /* 从 VICR 或 IA32_X2APIC_SELF_IP 中取得中断向量号 */
+
+    VIRR[vector] = 1; /* VIRR 对应位置位，表示有虚拟中断请求 */
+
+    RVI = get_highest_index_of_bitset(VIRR); /* 从 VIRR 里取出优先级最高的虚拟中断请求向量号 */
+
+    do_evaluate_virtual_interrupt(); /* 进行虚拟中断评估 */
+}
 ```
-do_self_ipi_virtualization
 
- vector VICR [7: 0] /从 VICR 或 A32_X2APIC_SELF_IP 中取得中断向量号/
+如上面伪码所示，处理器执行下面的 Self-IPI 虚拟化处理：
 
- VIRR [vector] - 1; /VIRR 对应位置位，表示有虚拟中断请求
+* 从 VICR 的 bis7:0 里取出虚拟中断向量号。注意，当写 1A32_X2APIC_SELF_IPI 寄存器时，则从 virtual-apic page 页面的 **3F0H** 位置的 bits 7:0 取中断向量号
 
- RVI -get_highest_index_of_bitset (VIRR); /从 VIR 里取出优先级最高的虚拟中断请求向量号/
+* 置中断向量号在 VIRR（**虚拟中断请求寄存器**）的对应位，指示**有虚拟中断请求出现**。
 
- do_evaluate_virtual_interrupt；进行虚拟中断评估
-```
-如上面伪码所示，处理器执行下面的 Self-ipl 虚拟化处理：
+* 从 VIRR 列表中取出优先级别最高的虚拟中断请求向量号赋予 **RVI** (`Requesting virtual interrupt`，参见 38.1 节）。指示**下一个将要 delivery 的虚拟中断例程**.
 
-* 从 VICR 的 bis7:0 里取出虚拟中断向量号。注意，当写 1A32X2APIC_ SELF IPI 寄存器时，则从 virtual-apic page 页面的 3FH 位置的 bis70 取中断向量号
+* 执行 virtual-interrupt 的评估及 delivery 操作.
 
-* 置中断向量号在 VIRR（虚拟中断请求寄存器）的对应位，指示有虚拟中断请求出现。
-
-* 从 VIRR 列表中取出优先级别最高的虚拟中断请求向量号赋予 RVI (Requesting virtual interrupt，参见 38.1 节）。指示下一个将要 delivery 的虚拟中断例程
-
-* 执行 virtual-interrupt 的评估及 delivery 操作
-
-在 Self-IPI 虚拟化处理里，依赖 RVI（参见 3.8.11 节）状态值而发出虚拟中断请求，并且更新 RVI 值
+在 Self-IPI 虚拟化处理里，依赖 **RVI**（参见 3.8.11 节）状态值而发出虚拟中断请求，并且更新 RVI 值
 
 注意：在这个操作里并不会产生 VM-exit 事件
