--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -1,6 +1,20 @@
 
 
-APIC-write emulation 的另一个结果是执行 **local APIC 状态的虚拟化**操作，包括下面几个虛拟化操作
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 几种虚拟化操作](#1-几种虚拟化操作)
+- [2. TPR 虚拟化](#2-tpr-虚拟化)
+- [3. PPR 虚拟化](#3-ppr-虚拟化)
+- [4. EOI虚拟化](#4-eoi虚拟化)
+- [5. Self-IPI 虚拟化](#5-self-ipi-虚拟化)
+
+<!-- /code_chunk_output -->
+
+# 1. 几种虚拟化操作
+
+**APIC-write emulation** 的另一个结果是执行 **local APIC 状态的虚拟化**操作，包括下面几个虛拟化操作
 
 * TPR 虚拟化
 
@@ -24,9 +38,9 @@ APIC-write emulation 的另一个结果是执行 **local APIC 状态的虚拟化
 
     * 在虚拟化 x2APIC 模式时，由 guest 执行 WRMSR 指令写 IA32_x2APIC_SELF_IPI 寄存器(ECX=83FH) 产生的结果。
 
-在 TPR 虚拟化、EOI 虚拟化以及 SelfP 虚拟化操作最后阶段里，会进行 virtual-interrupt 的评估及 delivery 操作（参见 7.2.13 节）。当仲裁通过后，虚拟中断通过 guest IDT 进行 delivery 处理
+在 TPR 虚拟化、EOI 虚拟化以及 Self-IPI 虚拟化操作**最后阶段**里，会进行 **virtual-interrupt 的评估及 delivery 操作**（参见 7.2.13 节）。当仲裁通过后，虚拟中断通过 **guest IDT** 进行 **delivery 处理**.
 
-# TPR 虚拟化
+# 2. TPR 虚拟化
 
 处理器在完成写 `virtual-APIC page` 页面偏移量 8OH 的 **VTPR** 后（前面 7.2.12 节 TPR 虚拟化所述的三种途径写 VTPR），执行的最后工作是进行 TPR (**task priority register**) 虚拟化处理.
 
@@ -62,7 +76,7 @@ do_tpr_virtualization()
 
 由 TPR 低于 threshold 而产生的“TPR beblow threshold VM-exit”属于 **trap** 类型的 VM-exit 事件（参见 5.10 节相关描述）
 
-# PPR 虚拟化
+# 3. PPR 虚拟化
 
 PPR (**processor priority register**）是**只读寄存器**，**不能**通过写 VPPR 发起 PPR 虚拟化操作。如前面第 7.2.12 节所述，能引发 **PPR 虚拟化**的是 **TPR 虚拟化**、**EOI 虚拟化**及 `VM-entry` 这三种途径。
 
@@ -95,7 +109,7 @@ do_ppr_virtualization()
 
 注意：在 virtual-interrupt 的 delivery 操作里，处理器修改 SVI、VISR 以及 RVI 值不会引发 PPR 虚拟化（尽管处理器也修改 VPPR 值，但不属于 PPR 虚拟化操作）。
 
-# EOI虚拟化
+# 4. EOI虚拟化
 
 在**一个中断例程返回前**应该向**中断控制器**（例如 8259、local APIC）发送 **EOI** 命令, EOI 命令引发中断控制器进行一些**复位**或者**更新状态**工作（如清中断 `In-service` 位）, 以便为下一个中断例程服务。
 
@@ -149,7 +163,7 @@ do_eoi_virtualization()
 
 由 EOI 虚拟化产生的 VM-exit 属于 trap 类型（另见 5.10 节描述）。
 
-# Self-IPI 虚拟化
+# 5. Self-IPI 虚拟化
 
 引发 Self-IPI 虚拟化操作是由于 guest 线性写 APC access page 页面偏移量 **300H** 位置，或者执行 WRMSR 指令写 1A32X2 APIC SELF IPI 寄存器（ECX=83FH）。同样，能引发 Sclf-IPI 虚拟化的前提是“virtual-interrupt delivery”位为 1。
 
