--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -1,6 +1,6 @@
 
 
-能引发虚拟中断的评估及 delivery 操作的前提是“virtual-interrupt delivery”位为 1 并且“external-interrupt exiting”位也必须为 1（参见 4.4.1,1 节）。注意，当处理器接收到 external interrupt（外部中断）时会产生 VM-exit
+能引发虚拟中断的评估及 delivery 操作的前提是 “`virtual-interrupt delivery`” 位为 **1** 并且 “`external-interrupt exiting`” 位也必须为 **1**（参见 4.4.1,1 节）。注意，当处理器接收到 external interrupt（**外部中断**）时会产生 **VM-exit**.
 
 因此，一个外部中断不能引起虚拟中断的评估与 delivery。外部中断是指
 
