--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -2,11 +2,11 @@
 
 能引发虚拟中断的评估及 delivery 操作的前提是 “`virtual-interrupt delivery`” 位为 **1** 并且 “`external-interrupt exiting`” 位也必须为 **1**（参见 4.4.1,1 节）。注意，当处理器接收到 external interrupt（**外部中断**）时会产生 **VM-exit**.
 
-因此，一个外部中断不能引起虚拟中断的评估与 delivery。外部中断是指
+因此，**一个外部中断不能引起虚拟中断的评估与 delivery**。外部中断是指
 
-* 由 local APIC 的 LVT 奇存器产生的本地中断（例如由 LVT timer、LVT perfmon 产生的中断）。
+* 由 local APIC 的 **LVT 奇存器**产生的**本地中断**（例如由 **LVT timer**、LVT perfmon 产生的中断）。
 
-* local APIC 接收到的外部中断请求。包括 8259 中断控制器发出的中断请求，I/O APIC 中断控制器发出的中断消息，以及 IPI（处理器间的中断消息）。
+* local APIC 接收到的外部中断请求。包括 8259 中断控制器发出的中断请求，I/O APIC 中断控制器发出的中断消息，以及 **IPI**（处理器间的中断消息）。
 
 
 
