--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -6,7 +6,7 @@
 
 * 由 local APIC 的 **LVT 奇存器**产生的**本地中断**（例如由 **LVT timer**、LVT perfmon 产生的中断）。
 
-* local APIC 接收到的外部中断请求。包括 8259 中断控制器发出的中断请求，I/O APIC 中断控制器发出的中断消息，以及 **IPI**（处理器间的中断消息）。
+* **local APIC 接收到的外部中断请求**。包括 8259 中断控制器发出的中断请求，I/O APIC 中断控制器发出的中断消息，以及 **IPI**（处理器间的中断消息）。
 
 因此，虚拟中断的评估与 delivery 只能由**下面几个途径引发**（另参见 72.12 节）:
 
@@ -22,9 +22,11 @@
 
 VMM 可以通过 `VM-entry interruption information` 字段来注入一个**外部中断**或**软件中断**给 guest 处理（参见 4.12 节）。另一方面，VMM 可以通过 guest-interrupt staus 字段的 RVI（参见 3.8.11 节）来注入一个**虚拟中断**给 guest 处理
 
- setvmcsfield GUEST INTERRUPT STATUS, 60h；注虚拟中断 6h 
- 
-上面的代码示例中，VMM 设置 guest-interrupt status 字段的值为 60H，从而注入一个虚拟中断 60H1 给 guest 处理。在完成 VM-entry 操作后（包括注入事件 delivery），处理器接着执行 PR 虚拟化，然后执行 virtual-interrupt 的评估与 delivery 操作（参见 4.9
+```
+SetVmcsField GUEST_INTERRUPT_STATUS, 60h    ;注虚拟中断 60h 
+```
+
+上面的代码示例中，VMM 设置 guest-interrupt status 字段的值为 60H, 从而注入一个虚拟中断 60H1 给 guest 处理。在完成 VM-entry 操作后（包括注入事件 delivery），处理器接着执行 PR 虚拟化，然后执行 virtual-interrupt 的评估与 delivery 操作（参见 4.9
 
 在 guest 端里，guest 只能通过写 VICR [3: 이或者 1A32X2APIC_ SELF IPI 寄存器执行 Self-ipi 虚拟化操作来主动产生虚拟中断
 
