--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -16,40 +16,40 @@
 
 **APIC-write emulation** 的另一个结果是执行 **local APIC 状态的虚拟化**操作，包括下面几个虛拟化操作
 
-* TPR 虚拟化
+* **TPR 虚拟化**
 
-    * 在虚拟化 **xAPIC** 模式时，由 guest 线性写 APIC-access page 页面偏移量 80H (TPR)产生的结果
+    * 在虚拟化 **xAPIC** 模式时，由 guest 线性写 **APIC-access page** 页面偏移量 **80H** (`TPR`)产生的结果
 
-    * 在虚拟化 **x2APIC** 模式时，由 guest 执行 WRMSR 指令写 **IA32_X2APIC_TPR** 寄存器（`ECX=808H`）产生的结果
+    * 在虚拟化 **x2APIC** 模式时，由 guest 执行 **WRMSR** 指令写 **IA32_X2APIC_TPR** 寄存器（`ECX=808H`）产生的结果
 
-    * 在 64 位模式下，guest 执行 `MOV-to-CR8` 指令产生的结果
+    * 在 **64** 位模式下，guest 执行 `MOV-to-CR8` 指令产生的结果
 
-* PPR 虚拟化：由 **TPR 虚拟化**、**EOI 虚拟化**或者 **VM-entry** 而引发。
+* **PPR 虚拟化**：由 **TPR 虚拟化**、**EOI 虚拟化**或者 **VM-entry** 而引发。
 
-* EOI 虚拟化
+* **EOI 虚拟化**
 
-    * 在虚拟化 xAPIC 模式时，由 guest 线性写 APIC-access page 页面偏移量 BOH (EOI)产生的结果。
+    * 在虚拟化 **xAPIC** 模式时，由 guest 线性写 **APIC-access page** 页面偏移量 **BOH** (`EOI`)产生的结果。
 
-    * 在虚拟化 x2APIC 模式时，由 guest 执行 WRMSR 指写 1A32X2 APIC EOI 寄存器（ECX=80BH）产生的结果。
+    * 在虚拟化 x2APIC 模式时，由 guest 执行 **WRMSR** 指写 **IA32_X2APIC_EOI** 寄存器（`ECX=80BH`）产生的结果。
 
-* Self-IPI 虚拟化
+* **Self-IPI 虚拟化**
 
-    * 在虚拟化 xAPIC 模式时，由 guest 线性写 APIC-access page 页面偏移量 300H (ICR 低 32 位) 产生的结果。
+    * 在虚拟化 **xAPIC** 模式时，由 guest 线性写 **APIC-access page** 页面偏移量 **300H** (**ICR 低 32 位**) 产生的结果。
 
-    * 在虚拟化 x2APIC 模式时，由 guest 执行 WRMSR 指令写 IA32_x2APIC_SELF_IPI 寄存器(ECX=83FH) 产生的结果。
+    * 在虚拟化 **x2APIC** 模式时，由 guest 执行 **WRMSR** 指令写 **IA32_x2APIC_SELF_IPI** 寄存器(`ECX=83FH`) 产生的结果。
 
-在 TPR 虚拟化、EOI 虚拟化以及 Self-IPI 虚拟化操作**最后阶段**里，会进行 **virtual-interrupt 的评估及 delivery 操作**（参见 7.2.13 节）。当仲裁通过后，虚拟中断通过 **guest IDT** 进行 **delivery 处理**.
+在 **TPR 虚拟化**、**EOI 虚拟化**以及 **Self-IPI 虚拟化**操作**最后阶段**里，会进行 **virtual-interrupt 的评估及 delivery 操作**（参见 7.2.13 节）。当仲裁通过后，虚拟中断通过 **guest IDT** 进行 **delivery 处理**.
 
 # 2. TPR 虚拟化
 
-处理器在完成写 `virtual-APIC page` 页面偏移量 8OH 的 **VTPR** 后（前面 7.2.12 节 TPR 虚拟化所述的三种途径写 VTPR），执行的最后工作是进行 TPR (**task priority register**) 虚拟化处理.
+处理器在完成写 `virtual-APIC page` 页面偏移量 **8OH** 的 **VTPR** 后（前面 7.2.12 节 TPR 虚拟化所述的三种途径写 VTPR），执行的最后工作是进行 TPR (**task priority register**) 虚拟化处理.
 
 ```cpp
 do_tpr_virtualization()
 {
     if ("virtual-interrupt delivery == 0)
     {
-        if  (VTPR[7:4] < TPR_threshold[3:0)
+        if(VTPR[7:4] < TPR_threshold[3:0)
         {
 
             /* 由于低于 TPR threshold 值而产生 WM-exit */
