--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -23,16 +23,16 @@
 VMM 可以通过 `VM-entry interruption information` 字段来注入一个**外部中断**或**软件中断**给 guest 处理（参见 4.12 节）。另一方面，VMM 可以通过 `guest-interrupt staus` 字段的 **RVI**（参见 3.8.11 节）来注入一个**虚拟中断**给 guest 处理
 
 ```
-SetVmcsField GUEST_INTERRUPT_STATUS, 60h    ;注虚拟中断 60h 
+SetVmcsField GUEST_INTERRUPT_STATUS, 60h    ;注入虚拟中断 60h 
 ```
 
-上面的代码示例中，VMM 设置 guest-interrupt status 字段的值为 60H, 从而**注入一个虚拟中断** **60H** 给 guest 处理。在完成 VM-entry 操作后（包括注入事件 delivery），处理器接着执行 PR 虚拟化，然后执行 virtual-interrupt 的评估与 delivery 操作（参见 4.9
+上面的代码示例中，VMM 设置 guest-interrupt status 字段的值为 60H, 从而**注入一个虚拟中断** **60H** 给 guest 处理。在完成 VM-entry 操作后（包括注入事件 delivery），处理器接着执行 **PPR 虚拟化**，然后执行 **virtual-interrupt 的评估与 delivery** 操作（参见 4.9)
 
-在 guest 端里，guest 只能通过写 VICR [3:0]或者 IA32_X2APIC_SELF_IPI 寄存器执行 Self-ipi 虚拟化操作来主动产生虚拟中断
+在 guest 端里，guest **只能**通过写 `VICR[31:0]`或者 **IA32_X2APIC_SELF_IPI** 寄存器执行 Self-IPI 虚拟化操作来主动产生虚拟中断
 
 2, 发送通知 IPI
 
-在 host 端里，VMM 除了可以注人虚拟中断外，也可以利用 posted- Interrupt processin 机制来实现虚拟中断的 delivery。VMM 需要通过 posted- interrupt notification vector 字段来发送一个通知 IPI 中断给 guest, guest 收到通知 IPI 后接着处理 VMM 设置的 posted-  interrupt（通告中断）
+在 host 端里，VMM 除了可以**注人虚拟中断**外，也可以利用 `posted-Interrupt processing` 机制来实现虚拟中断的 delivery。VMM 需要通过 posted- interrupt notification vector 字段来发送一个通知 IPI 中断给 guest, guest 收到通知 IPI 后接着处理 VMM 设置的 posted-  interrupt（通告中断）
 
 7.2.13.1 虚拟中断的评估
 
