--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -16,7 +16,7 @@
 
 **APIC-write emulation** 的另一个结果是执行 **local APIC 状态的虚拟化**操作，包括下面几个虛拟化操作
 
-* **TPR 虚拟化**
+* **TPR 虚拟化**: task priority register, 
 
     * 在虚拟化 **xAPIC** 模式时，由 guest 线性写 **APIC-access page** 页面偏移量 **80H** (`TPR`)产生的结果
 
@@ -42,7 +42,7 @@
 
 # 2. TPR 虚拟化
 
-处理器在完成写 `virtual-APIC page` 页面偏移量 **8OH** 的 **VTPR** 后（前面 7.2.12 节 TPR 虚拟化所述的三种途径写 VTPR），执行的最后工作是进行 TPR (**task priority register**) 虚拟化处理.
+处理器在完成写 `virtual-APIC page` 页面偏移量 **8OH** 的 **VTPR** 后（前面 阐述了三种途径写 VTPR），执行的最后工作是进行 TPR (**task priority register**) 虚拟化处理.
 
 ```cpp
 do_tpr_virtualization()
@@ -66,7 +66,7 @@ do_tpr_virtualization()
 
 * 当“`virtual-interrupt delivery`”为 1 时。
     
-    * 引发下一步 PR 虚拟化的执行（参见 7.2.12.2 节）。
+    * 引发下一步 **PPR 虚拟化**的执行（参见 7.2.12.2 节）。
 
     * 接着进行 `virtual-interrupt` 的评估及 delivery 操作（参见 7.2.3 节）。
 
