--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -16,7 +16,7 @@
 
 **APIC-write emulation** 的另一个结果是执行 **local APIC 状态的虚拟化**操作，包括下面几个虛拟化操作
 
-* **TPR 虚拟化**: task priority register, 
+* **TPR 虚拟化**: task priority register, 任务优先级寄存器, 可读/可写.
 
     * 在虚拟化 **xAPIC** 模式时，由 guest 线性写 **APIC-access page** 页面偏移量 **80H** (`TPR`)产生的结果
 
@@ -24,7 +24,9 @@
 
     * 在 **64** 位模式下，guest 执行 `MOV-to-CR8` 指令产生的结果
 
-* **PPR 虚拟化**：由 **TPR 虚拟化**、**EOI 虚拟化**或者 **VM-entry** 而引发。
+* **PPR 虚拟化**: processor priority register, 
+
+    * 由 **TPR 虚拟化**、**EOI 虚拟化**或者 **VM-entry** 而引发。
 
 * **EOI 虚拟化**
 
