--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -24,7 +24,7 @@
 
     * 在 **64** 位模式下，guest 执行 `MOV-to-CR8` 指令产生的结果
 
-* **PPR 虚拟化**: processor priority register, , 只读
+* **PPR 虚拟化**: processor priority register, 处理器优先级寄存器(和TPR的结构和意义是一样的), 只读
 
     * 由 **TPR 虚拟化**、**EOI 虚拟化**或者 **VM-entry** 而引发。
 
@@ -44,7 +44,7 @@
 
 # 2. TPR 虚拟化
 
-处理器在完成写 `virtual-APIC page` 页面偏移量 **8OH** 的 **VTPR** 后（前面阐述了三种途径写 VTPR），执行的最后工作是进行 TPR (**task priority register**) 虚拟化处理.
+处理器在完成写 `virtual-APIC page` 页面偏移量 **8OH** 的 **VTPR** 后（前面阐述了三种途径写 VTPR），执行的最后工作是进行 **TPR** (`task priority register`) **虚拟化处理**.
 
 ```cpp
 do_tpr_virtualization()
@@ -73,11 +73,13 @@ do_tpr_virtualization()
 
 * 当“`virtual-interrupt delivery`”为 0 时。
 
-    * 处理器检查到写入 VTPR 的 `bits 7:4` 值低于 TPR threshold 字段值 bis3:0 时，将产生 VM-exit（参见 3.5.11 与 5.3 节）。
+    * 处理器检查到写入 VTPR 的 `bits 7:4` 值低于 TPR threshold 字段值 bis3:0 时，将产生 **VM-exit**（参见 3.5.11 与 5.3 节）。
 
-由 TPR 低于 threshold 而产生的“TPR beblow threshold VM-exit”属于 **trap** 类型的 VM-exit 事件（参见 5.10 节相关描述）
+由 TPR 低于 threshold 而产生的“`TPR beblow threshold VM-exit`”属于 **trap** 类型的 VM-exit 事件（参见 5.10 节相关描述）
 
 # 3. PPR 虚拟化
+
+PPR见`Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/9. 中断vector及priority`
 
 PPR (**processor priority register**）是**只读寄存器**，**不能**通过写 VPPR 发起 PPR 虚拟化操作。如前面第 7.2.12 节所述，能引发 **PPR 虚拟化**的是 **TPR 虚拟化**、**EOI 虚拟化**及 `VM-entry` 这三种途径。
 
@@ -102,11 +104,11 @@ do_ppr_virtualization()
 
 * 更新 VTPR 值
 
-    * 当 `VTPR[7:4]` 大于或等于 `SVI[7:4]` 时，使用 VTPR 来更新 VPPR
+    * 当 `VTPR[7:4]` 大于或等于 `SVI[7:4]` 时，使用 **VTPR** 来更新 VPPR
 
-    * 当 `VTPR[7:4]` 低于 `SVI[7:4]` 时，使用 SVI 来更新 VPPR.
+    * 当 `VTPR[7:4]` 低于 `SVI[7:4]` 时，使用 **SVI** 来更新 VPPR.
 
-* 清 VPPR 的 bis 31:8 值
+* 清 VPPR 的 `bis 31:8` 值
 
 注意：在 virtual-interrupt 的 delivery 操作里，处理器修改 SVI、VISR 以及 RVI 值不会引发 PPR 虚拟化（尽管处理器也修改 VPPR 值，但不属于 PPR 虚拟化操作）。
 
@@ -114,7 +116,7 @@ do_ppr_virtualization()
 
 在**一个中断例程返回前**应该向**中断控制器**（例如 8259、local APIC）发送 **EOI** 命令, EOI 命令引发中断控制器进行一些**复位**或者**更新状态**工作（如清中断 `In-service` 位）, 以便为下一个中断例程服务。
 
-EOI 命令的发送被假设在**中断例程内执行**，EOI 虚拟化需要在 virtual-interrupt（虚拟中断）例程内进行，因此，引发 EOI 虚拟化的前提是 “`virtual-interrupt delivery`” 位为 1。
+EOI 命令的发送被假设在**中断例程内执行**，EOI 虚拟化需要在 virtual-interrupt（虚拟中断）例程内进行，因此，引发 EOI 虚拟化的前提是 “`virtual-interrupt delivery`” 位为 **1**。
 
 处理器在完成写入 `virtual-APIC page` 页面偏移量 **B0H** 的 VEOI 后（前面第 7,212 节所述的两种途径），执行 EOI 虚拟化操作
 
