--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -104,9 +104,9 @@ do_ppr_virtualization()
 
 * 更新 VTPR 值
 
-    * 当 `VTPR[7:4]` 大于或等于 `SVI[7:4]` 时，使用 **VTPR** 来更新 VPPR
+    * 当 `VTPR[7:4]` 大于或等于 `SVI[7:4]` 时，使用 **VTPR** 来**更新 VPPR**
 
-    * 当 `VTPR[7:4]` 低于 `SVI[7:4]` 时，使用 **SVI** 来更新 VPPR.
+    * 当 `VTPR[7:4]` 低于 `SVI[7:4]` 时，使用 **SVI** 来**更新 VPPR**.
 
 * 清 VPPR 的 `bis 31:8` 值
 
