--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/9. 中断vector及priority.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/9. 中断vector及priority.md
@@ -119,7 +119,7 @@ else
 
 访问CR8寄存器需要0级的权限，CR8寄存器**仅使用低4位**（bit 3～bit 0），这个值是前面所述的16个priority level（优先等级）。
 
-```c
+```cpp
 void write_cr8（int priority_level）
 {
        cr8=priority_level & 0x0f；  /* 写 CR8 寄存器 */
@@ -134,8 +134,8 @@ int read_cr8（）
 ```
 CR8寄存器的作用是和TPR一致的。从上面的式子我们可以看到：
 
-① 当**写CR8寄存器**时，**TPR[7：4]值将被更新为CR8**的值。
+① 当**写CR8寄存器**时，`TPR[7：4]`值将被更新为**CR8**的值。
 
-② 当**读CR8寄存器**时，CR8寄存器的值从**TPR[7：4**]里得到。
+② 当**读CR8寄存器**时，CR8寄存器的值从`TPR[7：4]`里得到。
 
 因此，CR8的值和`TPR[7：4]`里的值是相同的。当然，local APIC需要被enable（开启）
