--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -157,12 +157,12 @@ do_eoi_virtualization()
     
 * 接着进行 **PPR 虚拟化**处理（参见 7.2.12.2 节）。
 
-* 检查 `EOI-exit bitmap` 字段（参见 3.5.12 节），决定是否产生 VM-exit
+* 检查 **EOI-exit bitmap** 字段（参见 3.5.12 节），决定**是否产生 VM-exit**
 
-    * 当发送 EOI 命令的虚拟中断向量号在 EOI-exit bitmap 字段对应位为 1 时，产生 VM-exit。
+    * 当发送 EOI 命令的**虚拟中断向量号**在 EOI-exit bitmap 字段对应位为 1 时，产生 VM-exit。
     * 否则进行 virtual-interrupt 的评估及 delivery 操作。
 
-如上所述，EOI 虚拟化使用 SV (servicing virtual-Interrupt）状态值来进行虚拟中断例程的收尾工作，并且更新 SV 值，以便于处理器服务下一个虚拟中断例程
+如上所述，EOI 虚拟化使用 **SVI** (`servicing virtual-Interrupt`）状态值来进行**虚拟中断例程的收尾工作**，并且更新 SVI 值，以便于处理器服务下一个虚拟中断例程
 
 由 EOI 虚拟化产生的 VM-exit 属于 trap 类型（另见 5.10 节描述）。
 
