--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段/11. guest interrupt status字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段/11. guest interrupt status字段.md
@@ -29,7 +29,7 @@
 如果当前有**虚拟中断服务例程的嵌套**，也就是**上一个虚拟中断服务例程**被**优先级更高**的**虚拟中断请求打断**，当**优先级更高的虚拟中断服务例程**发送 **EOI** 命令后将**返回到之前被中断的服务例程**继续执行。那么，新的 **SVI** 值就等于之前**被中断服务例程的向量号**。
 
 ```cpp
-if(VISR !=0)    /* VISR 不为 0, 表明存在中断服务例程的候套 */
+if(VISR !=0)    /* VISR 不为 0, 表明存在中断服务例程的嵌套 */
 {
     SVI = VISR中为 1 的最高位 index 值;   /* 选择一个优先级别最高的服务例程 */
 }else {
