--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段/11. guest interrupt status字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段/11. guest interrupt status字段.md
@@ -5,6 +5,7 @@
 
 - [guest interrupt status字段](#guest-interrupt-status字段)
 - [EOI 虚拟化](#eoi-虚拟化)
+- [Self-IPI 虚拟化](#self-ipi-虚拟化)
 
 <!-- /code_chunk_output -->
 
@@ -37,17 +38,21 @@ if(VISR !=0)    /* VISR 不为 0, 表明存在中断服务例程的嵌套 */
 }
 ```
 
-SVI 值等于 VISR 中 “为 1 的最高位” 所对应的向量号。也就是从**虚拟中断的 In-service 列表**中选择一个优先级最高的中断服务例程的向量号。如果 VISR 为 0, 表示虚拟中断 n- service 列表为空，则 SV 的值为 0。关于“EOI 虚拟化”详见 7.2.12.3 节描述。
+* SVI 值等于 VISR 中 “为 1 的最高位” 所对应的向量号。也就是从**虚拟中断的 In-service 列表**中选择一个优先级最高的中断服务例程的向量号。
+* 如果 VISR 为 0, 表示虚拟中断 n-service 列表为空，则 SVI 的值为 0。
 
-Sel-PI 虚拟化
+关于“EOI 虚拟化”详见 7.2.12.3 节描述。
 
-Self-P 虚拟化将更新 RVI 的值，处理器从 VIR 中取出“为 1 的最高位 index”作为 RVI 值。也就是从当前的虚拟中断请求列表中选择优先级别最高的虚拟中断。
+# Self-IPI 虚拟化
 
- VIRR [vector] 1 /置虚拟中断请求位/
+Self-P 虚拟化将**更新 RVI 的值**，处理器从 VIRR 中取出“为 1 的最高位 index”作为 RVI 值。也就是从当前的虚拟中断请求列表中选择**优先级别最高的虚拟中断**。
 
-RVI=VIRR 中为 1 的最高位 1ndex 值 /从中断请求中选择一个优先级别最高的
+```cpp
+VIRR[vector] = 1;   /* 置虚拟中断请求位 */
+RVI = VIRR 中为 1 的最高位 index 值;    /* 从中断请求中选择一个优先级别最高的*/
+```
 
-VIRR 相当于虚拟中断请求列表，记录着所有发出的虚拟中断请求。当前 RVI 值就是
+VIRR 相当于**虚拟中断请求列表**，记录着所有发出的虚拟中断请求。当前 RVI 值就是
 
 这个列表优先级别最高的向量号。当不断有更高优先级别的虚拟中断请求发出时，RVI
 
