--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段/11. guest interrupt status字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段/11. guest interrupt status字段.md
@@ -6,6 +6,7 @@
 - [guest interrupt status字段](#guest-interrupt-status字段)
 - [EOI 虚拟化](#eoi-虚拟化)
 - [Self-IPI 虚拟化](#self-ipi-虚拟化)
+- [虚拟中断 delivery](#虚拟中断-delivery)
 
 <!-- /code_chunk_output -->
 
@@ -15,9 +16,9 @@
 
 **16 位**的 guest interrupt status 字段包括两部分: **RVI** (`Requesting Virtual Interrupt`）及 **SVI** (`Servicing Virtual Interrupt`）。它们是 8 位宽，保存虚拟中断的向量号.
 
-* RVI 记录处理器**当前优先级最高**的 virtual-interrupt 请求的**向量号**。
+* **RVI** 记录处理器**当前优先级最高**的 virtual-interrupt 请求的**向量号**。
 
-* SVI 记录处理器当前**正在执行**的 virtual-interrupt 服务例程的**向量号**。
+* **SVI** 记录处理器当前**正在执行**的 virtual-interrupt 服务例程的**向量号**。
 
 这两个字段与 virtual-APIC page 页面内的 **VIRR** (`Virtual Interrupt Request Register`，**虚拟中断请求寄存器**）以及 **VISR** (`Virtual In- ervice Register`，**虚拟中断服务寄存器**）相互作用。
 
@@ -52,26 +53,22 @@ VIRR[vector] = 1;   /* 置虚拟中断请求位 */
 RVI = VIRR 中为 1 的最高位 index 值;    /* 从中断请求中选择一个优先级别最高的*/
 ```
 
-VIRR 相当于**虚拟中断请求列表**，记录着所有发出的虚拟中断请求。当前 RVI 值就是
+VIRR 相当于**虚拟中断请求列表**，记录着所有发出的虚拟中断请求。当前 RVI 值就是这个列表优先级别最高的向量号。当不断有更高优先级别的虚拟中断请求发出时，RVI会不断地被更新。而低优先级别的虚拟中断请求则不影响 RVI 值。关于“Self-IPI 虚拟化”详见 7.2.12.4 节描述。
 
-这个列表优先级别最高的向量号。当不断有更高优先级别的虚拟中断请求发出时，RVI
+# 虚拟中断 delivery
 
-就会不断地被更新。而低优先级别的虚拟中断请求则不影响 RV 值。关于“Self-IPI 虚拟化”详见 72.12.4 节描述。
+EOI 虚拟化和 Self-IPI 虚拟化最后的结果可能会产生**虚拟中断的 delivery 操作**。虚拟中断 delivery 操作会**更新 RVI 与 SVI 值**。
 
-虚拟中断 deliver
+```cpp
+SVI = RVI;     /* SVI 等于 RVI */
+IRR[RVI] = 0;  /* 清 RVI 对应的虚拟中断请求位 */
+VISR[SVI] = 1:  /* 置 SVI 对应的虚拟中断服务位 */
+if(VIRR != 0)
+{
+    RVI = VIRR 中为 1 的最高位 index 值;    /* 选择下一个优先级最高的中断请求 */
+}else{
+    RVI = 0;
+}
+```
 
-EO 拟化和 Slf-PI 虚拟化最后的结果可能会产生虚拟中断的 delivery 操作。虚拟中断 delivery 操作会更新 RV 与 SV 值。
-
- SVI RVI: /SV 等于 RV
-
- IRR [RVI] =0; 清 RVI 对应的虚拟中断请求位/
-
- VISR [SVI] = 1: 置 SV 对应的虚拟中断服务位/
-
- If  (VIRR! = 0)
-
-RV=VIRR 中为 1 的最高位 index 值选择下一个优先级最高的中断请求/
-
- RVI =0
-
-在虚拟中断 delivery 操作中，SV 被赋于当前的 RVI 值。VIRR 对应的位被清 0, 而 VISR 对应的位被置 1。RVI 被更新为 VIRR 为 1 的最高位 index 值，也就是选择下个优先级最高的中断请求向量号。当 VIRR 列表为空时，RVI 为 0 值。关于“虚拟中断  delivery”详见 7.2.13 节描述
+在虚拟中断 delivery 操作中，SVI 被赋于当前的 RVI 值。**VIRR 对应的位被清 0**, 而 VISR 对应的位被置 1。**RVI** 被更新为 **VIRR** 为 1 的**最高位 index 值**，也就是选择**下个优先级最高的中断请求向量号**。当 VIRR 列表为空时，RVI 为 0 值。关于“虚拟中断  delivery”详见 7.2.13 节描述
