--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段/11. guest interrupt status字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段/11. guest interrupt status字段.md
@@ -3,14 +3,14 @@
 
 <!-- code_chunk_output -->
 
-- [guest interrupt status字段](#guest-interrupt-status字段)
-- [EOI 虚拟化](#eoi-虚拟化)
-- [Self-IPI 虚拟化](#self-ipi-虚拟化)
-- [虚拟中断 delivery](#虚拟中断-delivery)
+- [1. guest interrupt status字段](#1-guest-interrupt-status字段)
+- [2. EOI 虚拟化](#2-eoi-虚拟化)
+- [3. Self-IPI 虚拟化](#3-self-ipi-虚拟化)
+- [4. 虚拟中断 delivery](#4-虚拟中断-delivery)
 
 <!-- /code_chunk_output -->
 
-# guest interrupt status字段
+# 1. guest interrupt status字段
 
 在开启“`virtual-interrupt delivery`”功能的情况下，**guest interrupt status 字段**被作为**虚拟 local APIC 的状态值**，处理器使用这个字段来维护**虚拟中断的状态**。
 
@@ -24,7 +24,7 @@
 
 当执行 **EOI 虚拟化**，**Sel-IPI 虚拟化**或者**虚拟中断 delivery** 操作时，处理器会**更新 guest interrupt status 字段的值**.
 
-# EOI 虚拟化
+# 2. EOI 虚拟化
 
 在虚拟中断 delivery 后, **SVI** 记录处理器当前**正在服务**的 virtual-interrupt **向量号**。中断服务例程在**返回前**将进行 EOI 虚拟化操作，将 **SVI 值所对应在 VISR 的位清 0**, 然后**更新 SVI 值**。
 
@@ -44,7 +44,7 @@ if(VISR !=0)    /* VISR 不为 0, 表明存在中断服务例程的嵌套 */
 
 关于“EOI 虚拟化”详见 7.2.12.3 节描述。
 
-# Self-IPI 虚拟化
+# 3. Self-IPI 虚拟化
 
 Self-P 虚拟化将**更新 RVI 的值**，处理器从 VIRR 中取出“为 1 的最高位 index”作为 RVI 值。也就是从当前的虚拟中断请求列表中选择**优先级别最高的虚拟中断**。
 
@@ -55,7 +55,7 @@ RVI = VIRR 中为 1 的最高位 index 值;    /* 从中断请求中选择一个
 
 VIRR 相当于**虚拟中断请求列表**，记录着所有发出的虚拟中断请求。当前 RVI 值就是这个列表优先级别最高的向量号。当不断有更高优先级别的虚拟中断请求发出时，RVI会不断地被更新。而低优先级别的虚拟中断请求则不影响 RVI 值。关于“Self-IPI 虚拟化”详见 7.2.12.4 节描述。
 
-# 虚拟中断 delivery
+# 4. 虚拟中断 delivery
 
 EOI 虚拟化和 Self-IPI 虚拟化最后的结果可能会产生**虚拟中断的 delivery 操作**。虚拟中断 delivery 操作会**更新 RVI 与 SVI 值**。
 
@@ -71,4 +71,4 @@ if(VIRR != 0)
 }
 ```
 
-在虚拟中断 delivery 操作中，SVI 被赋于当前的 RVI 值。**VIRR 对应的位被清 0**, 而 VISR 对应的位被置 1。**RVI** 被更新为 **VIRR** 为 1 的**最高位 index 值**，也就是选择**下个优先级最高的中断请求向量号**。当 VIRR 列表为空时，RVI 为 0 值。关于“虚拟中断  delivery”详见 7.2.13 节描述
+在虚拟中断 delivery 操作中，SVI 被赋于**当前的 RVI 值**。**VIRR 对应的位被清 0**, 而 VISR 对应的位被置 1。**RVI** 被更新为 **VIRR** 为 1 的**最高位 index 值**，也就是选择**下个优先级最高的中断请求向量号**。当 VIRR 列表为空时，RVI 为 0 值。关于“虚拟中断  delivery”详见 7.2.13 节描述.
