--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/12. local APIC 虚拟化操作.md
@@ -118,7 +118,7 @@ do_ppr_virtualization()
 
 EOI 命令的发送被假设在**中断例程内执行**，EOI 虚拟化需要在 virtual-interrupt（虚拟中断）例程内进行，因此，引发 EOI 虚拟化的前提是 “`virtual-interrupt delivery`” 位为 **1**。
 
-处理器在完成写入 `virtual-APIC page` 页面偏移量 **B0H** 的 VEOI 后（前面第 7,212 节所述的两种途径），执行 EOI 虚拟化操作
+处理器在完成写入 `virtual-APIC page` 页面偏移量 **B0H** 的 **VEOI** 后（前面第 7.2.12 节所述的两种途径），执行 **EOI 虚拟化操作**
 
 ```cpp
 do_eoi_virtualization()
