--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -23,7 +23,7 @@
 
 * **local APIC 接收到的外部中断请求**。包括 8259 中断控制器发出的中断请求，I/O APIC 中断控制器发出的中断消息，以及 **IPI**（处理器间的中断消息）。
 
-因此，虚拟中断的评估与 delivery 只能由**下面几个途径引发**（另参见 72.12 节）:
+因此，虚拟中断的评估与 delivery **只能**由**下面几个途径引发**（另参见 72.12 节）:
 
 (1) **TPR 虚拟化**、**EOI 虚拟化**、**Sel-IPI 虚拟化**。
 
