--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -6,7 +6,7 @@
 - [引发虚拟中断评估及delivery的途径](#引发虚拟中断评估及delivery的途径)
   - [注入虚拟中断](#注入虚拟中断)
     - [RVI示例](#rvi示例)
-- [发送通知 IPI](#发送通知-ipi)
+  - [发送通知 IPI](#发送通知-ipi)
 - [虚拟中断的评估](#虚拟中断的评估)
 
 <!-- /code_chunk_output -->
@@ -49,9 +49,11 @@ SetVmcsField GUEST_INTERRUPT_STATUS, 60h    ;注入虚拟中断 60h
 
 上面的代码示例中，VMM 设置 `guest-interrupt status` 字段的值为 60H, 从而**注入一个虚拟中断** **60H** 给 guest 处理。在完成 VM-entry 操作后（包括注入事件 delivery），处理器接着执行 **PPR 虚拟化**，然后执行 **virtual-interrupt 的评估与 delivery** 操作（参见 4.9)
 
-# 发送通知 IPI
+## 发送通知 IPI
 
-在 host 端里，VMM 除了可以**注人虚拟中断**外，也可以利用 `posted-Interrupt processing` 机制来实现**虚拟中断的 delivery**。VMM 需要通过 posted-interrupt notification vector 字段来发送一个**通知 IPI 中断**给 guest, guest 收到通知 IPI 后接着处理 VMM 设置的 **posted-interrupt**（通告中断）
+在 host 端里，VMM 除了可以**注人虚拟中断**外，也可以利用 `posted-Interrupt processing` 机制来实现**虚拟中断的 delivery**。
+
+VMM 需要通过 posted-interrupt notification vector 字段来发送一个**通知 IPI 中断**给 guest, guest 收到通知 IPI 后接着处理 VMM 设置的 **posted-interrupt**（通告中断）
 
 # 虚拟中断的评估
 
