--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -249,27 +249,35 @@ perf list 'sched:*'
 
 ```
 # CPU counter statistics for the specified command:
+# 指定命令的CPU计数器统计信息
 perf stat command
 
 # Detailed CPU counter statistics (includes extras) for the specified command:
+# 指定命令的详细CPU计数器统计信息(包括额外信息)
 perf stat -d command
 
 # CPU counter statistics for the specified PID, until Ctrl-C:
+# 指定进程的CPU计数器统计信息, 直到 ctrl+c
 perf stat -p PID
 
 # CPU counter statistics for the entire system, for 5 seconds:
+# 整个系统的CPU计数器统计信息, 持续5秒
 perf stat -a sleep 5
 
 # Various basic CPU statistics, system wide, for 10 seconds:
+# 各种基本CPU统计，系统范围内，10秒
 perf stat -e cycles,instructions,cache-references,cache-misses,bus-cycles -a sleep 10
 
 # Various CPU level 1 data cache statistics for the specified command:
+# 指定命令的各种CPU 1级数据缓存统计信息:
 perf stat -e L1-dcache-loads,L1-dcache-load-misses,L1-dcache-stores command
 
 # Various CPU data TLB statistics for the specified command:
+# 指定命令的各种CPU数据TLB统计信息
 perf stat -e dTLB-loads,dTLB-load-misses,dTLB-prefetch-misses command
 
 # Various CPU last level cache statistics for the specified command:
+# 指定命令的不同
 perf stat -e LLC-loads,LLC-load-misses,LLC-stores,LLC-prefetches command
 
 # Using raw PMC counters, eg, counting unhalted core cycles:
