--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -277,37 +277,47 @@ perf stat -e L1-dcache-loads,L1-dcache-load-misses,L1-dcache-stores command
 perf stat -e dTLB-loads,dTLB-load-misses,dTLB-prefetch-misses command
 
 # Various CPU last level cache statistics for the specified command:
-# 指定命令的不同
+# 指定命令的各种CPU最后级别缓存统计信息
 perf stat -e LLC-loads,LLC-load-misses,LLC-stores,LLC-prefetches command
 
 # Using raw PMC counters, eg, counting unhalted core cycles:
+# 使用原生PMC计数器, 比如unhalted core cycles
 perf stat -e r003c -a sleep 5 
 
 # PMCs: counting cycles and frontend stalls via raw specification:
+# PMCs: 通过原始格式统计计数cycles和frontend stalls
 perf stat -e cycles -e cpu/event=0x0e,umask=0x01,inv,cmask=0x01/ -a sleep 5
 
 # Count syscalls per-second system-wide:
+# 统计计数系统范围内每秒的系统调用
 perf stat -e raw_syscalls:sys_enter -I 1000 -a
 
 # Count system calls by type for the specified PID, until Ctrl-C:
+# 指定进程的某种系统调用的统计计数
 perf stat -e 'syscalls:sys_enter_*' -p PID
 
 # Count system calls by type for the entire system, for 5 seconds:
+# 整个系统中某种系统调用的统计计数
 perf stat -e 'syscalls:sys_enter_*' -a sleep 5
 
 # Count scheduler events for the specified PID, until Ctrl-C:
+# 指定进程的所有scheduler事件的统计计数
 perf stat -e 'sched:*' -p PID
 
 # Count scheduler events for the specified PID, for 10 seconds:
+# 指定进程的所有scheduler事件的统计计数, 持续10秒
 perf stat -e 'sched:*' -p PID sleep 10
 
 # Count ext4 events for the entire system, for 10 seconds:
+# 整个系统中ext4事件的统计计数, 持续10秒
 perf stat -e 'ext4:*' -a sleep 10
 
 # Count block device I/O events for the entire system, for 10 seconds:
+# 整个系统中block设备I/O事件的统计计数
 perf stat -e 'block:*' -a sleep 10
 
 # Count all vmscan events, printing a report every second:
+# 统计计数系统范围内vmscan事件
 perf stat -e 'vmscan:*' -a -I 1000
 ```
 
