--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -1831,7 +1831,7 @@ address should be. The 'p' modifier can be specified multiple times:
 
 ## 9.4. Static Kernel Tracing: 内核态静态追踪
 
-一些静态追踪例子: tracepoints和其他静态事件的检测.
+一些静态追踪例子: tracepoints和其他**静态事件**的检测.
 
 ### 9.4.1. Counting Syscalls: 系统调用计数
 
