--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -329,12 +329,15 @@ perf stat -e 'vmscan:*' -a -I 1000
 
 ```
 # Sample on-CPU functions for the specified command, at 99 Hertz:
+# 指定命令的CPU上的功能, 以99hz的频率
 perf record -F 99 command
 
 # Sample on-CPU functions for the specified PID, at 99 Hertz, until Ctrl-C:
+# 指定进程的CPU上的功能, 以99hz的频率
 perf record -F 99 -p PID
 
 # Sample on-CPU functions for the specified PID, at 99 Hertz, for 10 seconds:
+# 指定进程的CPU上的功能, 以99hz的频率, 
 perf record -F 99 -p PID sleep 10
 
 # Sample CPU stack traces (via frame pointers) for the specified PID, at 99 Hertz, for 10 seconds:
