--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -329,27 +329,31 @@ perf stat -e 'vmscan:*' -a -I 1000
 
 ```
 # Sample on-CPU functions for the specified command, at 99 Hertz:
-# 指定命令的CPU上的功能, 以99hz的频率
+# 采样指定命令的CPU上的功能, 以99hz的频率
 perf record -F 99 command
 
 # Sample on-CPU functions for the specified PID, at 99 Hertz, until Ctrl-C:
-# 指定进程的CPU上的功能, 以99hz的频率
+# 采样指定进程的CPU上的功能, 以99hz的频率
 perf record -F 99 -p PID
 
 # Sample on-CPU functions for the specified PID, at 99 Hertz, for 10 seconds:
-# 指定进程的CPU上的功能, 以99hz的频率, 
+# 采样指定进程的CPU上的功能, 以99hz的频率, 持续10秒
 perf record -F 99 -p PID sleep 10
 
 # Sample CPU stack traces (via frame pointers) for the specified PID, at 99 Hertz, for 10 seconds:
+# 采样指定进程的CPU堆栈追踪(通过帧指针, 内核编译选项), 以99hz的频率, 持续10秒
 perf record -F 99 -p PID -g -- sleep 10
 
 # Sample CPU stack traces for the PID, using dwarf (dbg info) to unwind stacks, at 99 Hertz, for 10 seconds:
+# 采样指定进程的CPU堆栈追踪(通过dwarf释放堆栈), 以99hz的频率, 持续10秒
 perf record -F 99 -p PID --call-graph dwarf sleep 10
 
 # Sample CPU stack traces for the entire system, at 99 Hertz, for 10 seconds (< Linux 4.11):
+# 采样整个系统的CPU堆栈追踪, 以99hz的频率, 持续10秒, 4.11内核以下
 perf record -F 99 -ag -- sleep 10
 
 # Sample CPU stack traces for the entire system, at 99 Hertz, for 10 seconds (>= Linux 4.11):
+# 采样整个系统的CPU堆栈追踪, 以99hz的频率, 持续10秒, 4.11内核以上
 perf record -F 99 -g -- sleep 10
 
 # If the previous command didn't work, try forcing perf to use the cpu-clock event:
