--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -357,21 +357,27 @@ perf record -F 99 -ag -- sleep 10
 perf record -F 99 -g -- sleep 10
 
 # If the previous command didn't work, try forcing perf to use the cpu-clock event:
+#  
 perf record -F 99 -e cpu-clock -ag -- sleep 10
 
 # Sample CPU stack traces for a container identified by its /sys/fs/cgroup/perf_event cgroup:
+# 
 perf record -F 99 -e cpu-clock --cgroup=docker/1d567f4393190204...etc... -a -- sleep 10
 
 # Sample CPU stack traces for the entire system, with dwarf stacks, at 99 Hertz, for 10 seconds:
+# 采样整个系统的CPU堆栈追踪(dwarf方式), 以99hz的频率, 持续10秒
 perf record -F 99 -a --call-graph dwarf sleep 10
 
 # Sample CPU stack traces for the entire system, using last branch record for stacks, ... (>= Linux 4.?):
+# 采样整个系统的CPU堆栈追踪(lbr方式), 以99hz的频率, 持续10秒, 4.X内核以上
 perf record -F 99 -a --call-graph lbr sleep 10
 
 # Sample CPU stack traces, once every 10,000 Level 1 data cache misses, for 5 seconds:
+# 采样CPU堆栈追踪, 每发生10000次采样一次L1数据缓存miss, 持续5秒
 perf record -e L1-dcache-load-misses -c 10000 -ag -- sleep 5
 
 # Sample CPU stack traces, once every 100 last level cache misses, for 5 seconds:
+# 
 perf record -e LLC-load-misses -c 100 -ag -- sleep 5 
 
 # Sample on-CPU kernel instructions, for 5 seconds:
