--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -377,10 +377,11 @@ perf record -F 99 -a --call-graph lbr sleep 10
 perf record -e L1-dcache-load-misses -c 10000 -ag -- sleep 5
 
 # Sample CPU stack traces, once every 100 last level cache misses, for 5 seconds:
-# 
+# 采样
 perf record -e LLC-load-misses -c 100 -ag -- sleep 5 
 
 # Sample on-CPU kernel instructions, for 5 seconds:
+# 采样CPU上的内核态指令
 perf record -e cycles:k -a -- sleep 5 
 
 # Sample on-CPU user instructions, for 5 seconds:
